--- a/concurrency_related/asyncio_script/docu/concept/02_async_func_coro_gen_iter.ipynb
+++ b/concurrency_related/asyncio_script/docu/concept/02_async_func_coro_gen_iter.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "# coro declared with the async/await syntax is the preferred way of writing asyncio applications\n",
-    "async def aprint(x:int): # A\n",
+    "async def aprint(x: int):  # A\n",
     "    print(f\"{x = }\")"
    ]
   },
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "coro = aprint(3) # B, calling coro won't schedule execution\n",
+    "coro = aprint(3)  # B, calling coro won't schedule execution\n",
     "coro"
    ]
   },
@@ -80,7 +80,8 @@
    ],
    "source": [
     "import types\n",
-    "issubclass(type(coro), types.CoroutineType) # native coroutine"
+    "\n",
+    "issubclass(type(coro), types.CoroutineType)  # native coroutine"
    ]
   },
   {
@@ -109,7 +110,7 @@
     }
    ],
    "source": [
-    "[i for i in dir(coro) if not i.startswith('__')]"
+    "[i for i in dir(coro) if not i.startswith(\"__\")]"
    ]
   },
   {
@@ -151,8 +152,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def random_n(): # C\n",
+    "def random_n():  # C\n",
     "    import random\n",
+    "\n",
     "    random.seed(42)\n",
     "    while True:\n",
     "        yield random.randint(1, 100)"
@@ -219,7 +221,7 @@
     }
    ],
    "source": [
-    "next(rng)# D"
+    "next(rng)  # D"
    ]
   }
  ],
