--- a/concurrency_related/asyncio_script/docu/concept/03_tasks.ipynb
+++ b/concurrency_related/asyncio_script/docu/concept/03_tasks.ipynb
@@ -50,9 +50,10 @@
     "async def aprint(magic_number: int):\n",
     "    print(f\"The magic number is: {magic_number}\")\n",
     "\n",
+    "\n",
     "coroutine = aprint(magic_number=5)\n",
     "\n",
-    "task = asyncio.create_task(coroutine) # B\n",
+    "task = asyncio.create_task(coroutine)  # B\n",
     "\n",
     "# async def main():\n",
     "#     await task\n",
@@ -99,7 +100,7 @@
     }
    ],
    "source": [
-    "[i for i in dir(task) if 'callback' in i]"
+    "[i for i in dir(task) if \"callback\" in i]"
    ]
   },
   {
@@ -109,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task._callbacks # A"
+    "task._callbacks  # A"
    ]
   },
   {
