--- a/concurrency_related/asyncio_script/docu/concept/05_coro_inner_workings.ipynb
+++ b/concurrency_related/asyncio_script/docu/concept/05_coro_inner_workings.ipynb
@@ -52,30 +52,32 @@
     "    def __await__(self):\n",
     "        print(f\"Rock.__await__ called.\")\n",
     "\n",
-    "        value_sent_in = yield 7 \n",
-    "        # A3.this yield pauses coroutine execution; \n",
+    "        value_sent_in = yield 7\n",
+    "        # A3.this yield pauses coroutine execution;\n",
     "        # B2. resume from where yielded, which returns the arg from send()\n",
     "\n",
     "        print(f\"Rock.__await__ resuming with value: {value_sent_in}.\")\n",
     "        return value_sent_in\n",
+    "\n",
     "\n",
     "async def main():\n",
     "    print(\"Beginning coro.\")\n",
     "    rock = Rock()\n",
     "    print(\"Awaiting the awaitable rock...\")\n",
     "\n",
-    "    value_from_rock = await rock \n",
-    "    # A2. calls __await__; \n",
+    "    value_from_rock = await rock\n",
+    "    # A2. calls __await__;\n",
     "    # A4. propagates yielded value\n",
     "\n",
     "    print(f\"coro received value: {value_from_rock} from rock.\")\n",
     "    return value_from_rock\n",
     "    # B3. when coro finishes, it raises StopIteration with return value\n",
     "\n",
+    "\n",
     "coroutine = main()\n",
     "print(f\"calling send with: None.\")\n",
     "\n",
-    "intermediate_result = coroutine.send(None) \n",
+    "intermediate_result = coroutine.send(None)\n",
     "# A1. start coro with send(None)\n",
     "# A5. receives yielded value\n",
     "\n",
@@ -83,7 +85,7 @@
     "\n",
     "try:\n",
     "    print(f\"calling send with: 42.\")\n",
-    "    coroutine.send(42) # B1. Resume coro, send 42\n",
+    "    coroutine.send(42)  # B1. Resume coro, send 42\n",
     "except StopIteration as e:\n",
     "    returned_value = e.value\n",
     "    print(f\"{returned_value = }\")"
@@ -115,7 +117,7 @@
    "outputs": [],
    "source": [
     "def gen():\n",
-    "    received = yield 1 # A\n",
+    "    received = yield 1  # A\n",
     "    print(f\"gen received: {received}\")\n",
     "    received = yield 2\n",
     "    print(f\"gen received again: {received}\")"
@@ -168,7 +170,7 @@
     }
    ],
    "source": [
-    "[i for i in dir(g) if not i.startswith('_')]"
+    "[i for i in dir(g) if not i.startswith(\"_\")]"
    ]
   },
   {
@@ -196,7 +198,7 @@
     }
    ],
    "source": [
-    "print(f\"{next(g) = }\") # B\n",
+    "print(f\"{next(g) = }\")  # B\n",
     "g.gi_frame.f_locals"
    ]
   },
@@ -226,7 +228,7 @@
     }
    ],
    "source": [
-    "print(f\"{g.send(9) = }\") # C\n",
+    "print(f\"{g.send(9) = }\")  # C\n",
     "g.gi_frame.f_locals"
    ]
   },
@@ -302,13 +304,13 @@
     "#     def __init__(self, operation_name, duration):\n",
     "#         self.operation_name = operation_name\n",
     "#         self.duration = duration\n",
-    "        \n",
+    "\n",
     "#     def __await__(self):\n",
     "#         print(f\"Starting {self.operation_name}...\")\n",
-    "        \n",
+    "\n",
     "#         # This yield tells event loop: \"I'm waiting for I/O, come back later\"\n",
     "#         yield self  # Event loop receives this object\n",
-    "        \n",
+    "\n",
     "#         # When resumed, simulate I/O completion\n",
     "#         print(f\"{self.operation_name} completed!\")\n",
     "#         return f\"Result from {self.operation_name}\"\n",
@@ -316,10 +318,10 @@
     "# async def fetch_data(url):\n",
     "#     \"\"\"Coroutine that performs I/O operations\"\"\"\n",
     "#     print(f\"Fetching {url}\")\n",
-    "    \n",
+    "\n",
     "#     # await triggers __await__, which yields control to event loop\n",
     "#     result = await IOOperation(f\"HTTP request to {url}\", 2)\n",
-    "    \n",
+    "\n",
     "#     print(f\"Got: {result}\")\n",
     "#     return result\n",
     "\n",
@@ -331,7 +333,7 @@
     "#         fetch_data(\"api.example.com/posts\"),\n",
     "#         fetch_data(\"api.example.com/comments\")\n",
     "#     ]\n",
-    "    \n",
+    "\n",
     "#     # Event loop will manage these concurrently\n",
     "#     results = await asyncio.gather(*tasks)\n",
     "#     return results\n",
@@ -341,30 +343,30 @@
     "#     def __init__(self):\n",
     "#         self.ready_queue = []\n",
     "#         self.waiting_ios = []\n",
-    "    \n",
+    "\n",
     "#     def run_coroutine(self, coro):\n",
     "#         \"\"\"Main event loop logic\"\"\"\n",
     "#         self.ready_queue.append(coro)\n",
-    "        \n",
+    "\n",
     "#         while self.ready_queue or self.waiting_ios:\n",
     "#             # Process ready coroutines\n",
     "#             while self.ready_queue:\n",
     "#                 current_coro = self.ready_queue.pop(0)\n",
-    "                \n",
+    "\n",
     "#                 try:\n",
     "#                     # This is like coroutine.send(None) or coroutine.send(result)\n",
     "#                     yielded_value = current_coro.send(None)\n",
-    "                    \n",
+    "\n",
     "#                     # If coroutine yielded an I/O operation\n",
     "#                     if isinstance(yielded_value, IOOperation):\n",
     "#                         print(f\"Event loop: Got I/O operation {yielded_value.operation_name}\")\n",
     "#                         # Simulate I/O completion after some time\n",
     "#                         self.waiting_ios.append((current_coro, yielded_value))\n",
-    "                    \n",
+    "\n",
     "#                 except StopIteration as e:\n",
     "#                     print(f\"Coroutine finished with result: {e.value}\")\n",
     "#                     return e.value\n",
-    "            \n",
+    "\n",
     "#             # Simulate I/O completion (in real event loop, this is epoll/select/IOCP)\n",
     "#             if self.waiting_ios:\n",
     "#                 completed_coro, io_op = self.waiting_ios.pop(0)\n",
