--- a/concurrency_related/asyncio_script/docu/concept/06_Future.ipynb
+++ b/concurrency_related/asyncio_script/docu/concept/06_Future.ipynb
@@ -47,7 +47,7 @@
     }
    ],
    "source": [
-    "issubclass(asyncio.Task, asyncio.Future) # P"
+    "issubclass(asyncio.Task, asyncio.Future)  # P"
    ]
   },
   {
@@ -68,7 +68,7 @@
     }
    ],
    "source": [
-    "[i for i in dir(asyncio.Future) if 'callback' in i] # Q"
+    "[i for i in dir(asyncio.Future) if \"callback\" in i]  # Q"
    ]
   },
   {
@@ -94,16 +94,17 @@
    "source": [
     "class YieldToEventLoop:\n",
     "    def __await__(self):\n",
-    "        yield # C\n",
+    "        yield  # C\n",
+    "\n",
     "\n",
     "async def _sleep_watcher(future, time_to_wake):\n",
     "    while True:\n",
-    "        if time.time() >= time_to_wake: # E\n",
+    "        if time.time() >= time_to_wake:  # E\n",
     "            # This marks the future as done.\n",
-    "            future.set_result(None) # B\n",
+    "            future.set_result(None)  # B\n",
     "            break\n",
     "        else:\n",
-    "            await YieldToEventLoop() # D"
+    "            await YieldToEventLoop()  # D"
    ]
   },
   {
@@ -119,7 +120,7 @@
     "    # Add the watcher-task to the event loop.\n",
     "    watcher_task = asyncio.create_task(_sleep_watcher(future, time_to_wake))\n",
     "    # Block until the future is marked as done.\n",
-    "    await future # A"
+    "    await future  # A"
    ]
   },
   {
@@ -144,13 +145,14 @@
     "async def other_work():\n",
     "    print(\"I like work. Work work.\")\n",
     "\n",
+    "\n",
     "async def main():\n",
     "    # Add a few other tasks to the event loop, so there's something\n",
     "    # to do while asynchronously sleeping.\n",
     "    work_tasks = [\n",
     "        asyncio.create_task(other_work()),\n",
     "        asyncio.create_task(other_work()),\n",
-    "        asyncio.create_task(other_work())\n",
+    "        asyncio.create_task(other_work()),\n",
     "    ]\n",
     "    print(\n",
     "        \"Beginning asynchronous sleep at time: \"\n",
@@ -163,6 +165,7 @@
     "    )\n",
     "    # asyncio.gather effectively awaits each task in the collection.\n",
     "    await asyncio.gather(*work_tasks)\n",
+    "\n",
     "\n",
     "await main()"
    ]
