--- a/concurrency_related/asyncio_script/docu/coroutines_tasks_related/coroutines.ipynb
+++ b/concurrency_related/asyncio_script/docu/coroutines_tasks_related/coroutines.ipynb
@@ -37,17 +37,20 @@
     "import asyncio\n",
     "import time\n",
     "\n",
+    "\n",
     "async def say_after(delay, what):\n",
     "    await asyncio.sleep(delay)\n",
     "    print(what)\n",
     "\n",
+    "\n",
     "async def main():\n",
     "    print(f\"started at {time.strftime('%X')}\")\n",
     "\n",
-    "    await say_after(1, 'hello') # A\n",
-    "    await say_after(2, 'world')\n",
+    "    await say_after(1, \"hello\")  # A\n",
+    "    await say_after(2, \"world\")\n",
     "\n",
     "    print(f\"finished at {time.strftime('%X')}\")\n",
+    "\n",
     "\n",
     "await main()"
    ]
@@ -71,11 +74,9 @@
    ],
    "source": [
     "async def main():\n",
-    "    task1 = asyncio.create_task( # B\n",
-    "        say_after(1, 'hello'))\n",
+    "    task1 = asyncio.create_task(say_after(1, \"hello\"))  # B\n",
     "\n",
-    "    task2 = asyncio.create_task(\n",
-    "        say_after(2, 'world'))\n",
+    "    task2 = asyncio.create_task(say_after(2, \"world\"))\n",
     "\n",
     "    print(f\"started at {time.strftime('%X')}\")\n",
     "\n",
@@ -84,6 +85,7 @@
     "    await task1\n",
     "\n",
     "    print(f\"finished at {time.strftime('%X')}\")\n",
+    "\n",
     "\n",
     "await main()"
    ]
@@ -107,18 +109,17 @@
    ],
    "source": [
     "async def main():\n",
-    "    async with asyncio.TaskGroup() as tg: # C\n",
-    "        task1 = tg.create_task(\n",
-    "            say_after(1, 'hello'))\n",
+    "    async with asyncio.TaskGroup() as tg:  # C\n",
+    "        task1 = tg.create_task(say_after(1, \"hello\"))\n",
     "\n",
-    "        task2 = tg.create_task(\n",
-    "            say_after(2, 'world'))\n",
+    "        task2 = tg.create_task(say_after(2, \"world\"))\n",
     "\n",
-    "        print(f\"started at {time.strftime('%X')}\")# C1\n",
+    "        print(f\"started at {time.strftime('%X')}\")  # C1\n",
     "\n",
     "    # The await is implicit when the context manager exits.\n",
     "\n",
     "    print(f\"finished at {time.strftime('%X')}\")\n",
+    "\n",
     "\n",
     "await main()"
    ]
