--- a/concurrency_related/asyncio_script/docu/coroutines_tasks_related/threads.ipynb
+++ b/concurrency_related/asyncio_script/docu/coroutines_tasks_related/threads.ipynb
@@ -30,16 +30,19 @@
     "import time\n",
     "import asyncio\n",
     "\n",
+    "\n",
     "def blocking_io(sec):\n",
-    "    time.sleep(sec) # C\n",
+    "    time.sleep(sec)  # C\n",
+    "\n",
     "\n",
     "async def main():\n",
     "    t = time.time()\n",
     "    await asyncio.gather(\n",
-    "        asyncio.to_thread(blocking_io, 1), # B\n",
+    "        asyncio.to_thread(blocking_io, 1),  # B\n",
     "        asyncio.to_thread(blocking_io, sec=1),\n",
     "    )\n",
     "    print(f\"{time.time() - t = }\")\n",
+    "\n",
     "\n",
     "await main()"
    ]
@@ -62,13 +65,15 @@
     "import numpy as np\n",
     "from scipy import optimize\n",
     "\n",
-    "def optimization_task(n): # D 1\n",
+    "\n",
+    "def optimization_task(n):  # D 1\n",
     "    def objective(x):\n",
     "        return np.sum(x**2) + np.sum(np.sin(x))\n",
-    "    \n",
+    "\n",
     "    x0 = np.random.randn(n)\n",
-    "    result = optimize.minimize(objective, x0, method='BFGS')\n",
+    "    result = optimize.minimize(objective, x0, method=\"BFGS\")\n",
     "    return result.x\n",
+    "\n",
     "\n",
     "t = time.time()\n",
     "_ = optimization_task(1000)\n",
@@ -98,6 +103,7 @@
     "    )\n",
     "    print(f\"{time.time() - t = }\")\n",
     "\n",
+    "\n",
     "await main()"
    ]
   },
@@ -119,7 +125,8 @@
     "import numpy as np\n",
     "import numba\n",
     "\n",
-    "@numba.jit(nopython=True, nogil=True) # D 2\n",
+    "\n",
+    "@numba.jit(nopython=True, nogil=True)  # D 2\n",
     "def gradient_descent(x0, lr=0.01, iterations=10000):\n",
     "    \"\"\"Simple gradient descent optimization with Numba\"\"\"\n",
     "    x = x0.copy()\n",
@@ -130,14 +137,16 @@
     "        x = x - lr * grad\n",
     "    return x\n",
     "\n",
-    "def optimization_task_numba(n): # D\n",
+    "\n",
+    "def optimization_task_numba(n):  # D\n",
     "    x0 = np.random.randn(n)\n",
     "    result = gradient_descent(x0)\n",
     "    return result\n",
     "\n",
+    "\n",
     "# Test\n",
     "t = time.time()\n",
-    "_ = optimization_task_numba(1_000*30)\n",
+    "_ = optimization_task_numba(1_000 * 30)\n",
     "print(f\"Blocking optimization took {time.time() - t} seconds.\")"
    ]
   },
@@ -159,10 +168,11 @@
     "async def main():\n",
     "    t = time.time()\n",
     "    await asyncio.gather(\n",
-    "        asyncio.to_thread(optimization_task_numba, 1000*30),\n",
-    "        asyncio.to_thread(optimization_task_numba, 1000*30),\n",
+    "        asyncio.to_thread(optimization_task_numba, 1000 * 30),\n",
+    "        asyncio.to_thread(optimization_task_numba, 1000 * 30),\n",
     "    )\n",
     "    print(f\"{time.time() - t = }\")\n",
+    "\n",
     "\n",
     "await main()"
    ]
