--- a/concurrency_related/asyncio_script/docu/queues_related/queue_eg.ipynb
+++ b/concurrency_related/asyncio_script/docu/queues_related/queue_eg.ipynb
@@ -31,7 +31,7 @@
     "        # Notify the queue that the \"work item\" has been processed.\n",
     "        queue.task_done()\n",
     "\n",
-    "        print(f'{name} has slept for {sleep_for:.2f} seconds')\n",
+    "        print(f\"{name} has slept for {sleep_for:.2f} seconds\")\n",
     "\n",
     "\n",
     "async def main():\n",
@@ -48,7 +48,7 @@
     "    # Create three worker tasks to process the queue concurrently.\n",
     "    tasks = []\n",
     "    for i in range(3):\n",
-    "        task = asyncio.create_task(worker(f'worker-{i}', queue))\n",
+    "        task = asyncio.create_task(worker(f\"worker-{i}\", queue))\n",
     "        tasks.append(task)\n",
     "\n",
     "    # Wait until the queue is fully processed.\n",
@@ -62,9 +62,9 @@
     "    # Wait until all worker tasks are cancelled.\n",
     "    await asyncio.gather(*tasks, return_exceptions=True)\n",
     "\n",
-    "    print('====')\n",
-    "    print(f'3 workers slept in parallel for {total_slept_for:.2f} seconds')\n",
-    "    print(f'total expected sleep time: {total_sleep_time:.2f} seconds')\n"
+    "    print(\"====\")\n",
+    "    print(f\"3 workers slept in parallel for {total_slept_for:.2f} seconds\")\n",
+    "    print(f\"total expected sleep time: {total_sleep_time:.2f} seconds\")"
    ]
   },
   {
