--- a/data_related/analysis/05_flags.ipynb
+++ b/data_related/analysis/05_flags.ipynb
@@ -98,7 +98,7 @@
     "    HAS_SURVIVED = 1 << 0\n",
     "    IS_ALONE = 1 << 1\n",
     "    IS_MALE = 1 << 2\n",
-    "    AGE_BELOW_18 = 1 << 3\n"
+    "    AGE_BELOW_18 = 1 << 3"
    ]
   },
   {
