--- a/data_related/analysis/25_sfa.ipynb
+++ b/data_related/analysis/25_sfa.ipynb
@@ -48,7 +48,8 @@
    ],
    "source": [
     "import seaborn as sns\n",
-    "df = sns.load_dataset('titanic')\n",
+    "\n",
+    "df = sns.load_dataset(\"titanic\")\n",
     "print(f\"{df.shape = }\")\n",
     "print(df.head().to_string())"
    ]
