--- a/data_related/analysis/90_excel_writer.ipynb
+++ b/data_related/analysis/90_excel_writer.ipynb
@@ -628,7 +628,7 @@
     "ew = ExcelWriter(file_path=Path(\"output/test.xlsx\"))\n",
     "\n",
     "ew.write_df(tbl, title=\"Table 1: DataFrame\")\n",
-    "ew.write_df(tbl['who'], title=\"Series 1\")\n",
+    "ew.write_df(tbl[\"who\"], title=\"Series 1\")\n",
     "ew.write_df(\n",
     "    tbl_styled, title=\"Table 2: Styled DataFrame\", location=\"right\"\n",
     ")  # can write to the right of previous item\n",
