--- a/data_related/db_related/meta_tbl_qrys/index_constraints.ipynb
+++ b/data_related/db_related/meta_tbl_qrys/index_constraints.ipynb
@@ -11,14 +11,16 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
+    "\n",
     "# add run method to engine\n",
-    "def run(self: sa.engine.Engine, sql:str) -> pd.DataFrame | None:\n",
+    "def run(self: sa.engine.Engine, sql: str) -> pd.DataFrame | None:\n",
     "    with self.begin() as conn:\n",
     "        res = conn.execute(sa.text(sql))\n",
     "        if res.returns_rows:\n",
     "            return pd.DataFrame(res.all(), columns=res.keys())\n",
     "\n",
-    "sa.engine.Engine.run = run\n"
+    "\n",
+    "sa.engine.Engine.run = run"
    ]
   },
   {
