--- a/data_related/pandas_related/applys/basic.ipynb
+++ b/data_related/pandas_related/applys/basic.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "import seaborn as sns\n",
     "\n",
-    "df = sns.load_dataset('titanic')[['survived', 'who','age','fare']]\n",
+    "df = sns.load_dataset(\"titanic\")[[\"survived\", \"who\", \"age\", \"fare\"]]\n",
     "print(f\"{df.shape = }\")\n",
     "print(df.head().to_string())"
    ]
@@ -123,7 +123,7 @@
    ],
    "source": [
     "print(\"Scalar return:\")\n",
-    "result1 = df.groupby('who').apply(lambda x: len(x), include_groups=False)\n",
+    "result1 = df.groupby(\"who\").apply(lambda x: len(x), include_groups=False)\n",
     "print(f\"Type: {type(result1)}, Shape: {result1.shape}\")\n",
     "result1"
    ]
@@ -388,7 +388,9 @@
    ],
    "source": [
     "print(\"\\nSeries return (your case):\")\n",
-    "result2 = df.groupby('who').apply(lambda x: pd.Series(np.arange(len(x)), x.index), include_groups=False)\n",
+    "result2 = df.groupby(\"who\").apply(\n",
+    "    lambda x: pd.Series(np.arange(len(x)), x.index), include_groups=False\n",
+    ")\n",
     "print(f\"Type: {type(result2)}, Index levels: {result2.index.nlevels}\")\n",
     "result2"
    ]
@@ -551,7 +553,9 @@
    ],
    "source": [
     "print(\"\\nDataFrame return:\")\n",
-    "result3 = df.groupby('who').apply(lambda x: x[['age', 'fare']].head(2), include_groups=False)\n",
+    "result3 = df.groupby(\"who\").apply(\n",
+    "    lambda x: x[[\"age\", \"fare\"]].head(2), include_groups=False\n",
+    ")\n",
     "print(f\"Type: {type(result3)}, Index levels: {result3.index.nlevels}\")\n",
     "result3"
    ]
