--- a/data_related/pandas_related/intro/analytics_example/pd_analytics_annotated.ipynb
+++ b/data_related/pandas_related/intro/analytics_example/pd_analytics_annotated.ipynb
@@ -301,7 +301,7 @@
     }
    ],
    "source": [
-    "[i+0.5 for i in df.index][:5]"
+    "[i + 0.5 for i in df.index][:5]"
    ]
   },
   {
@@ -583,7 +583,7 @@
     }
    ],
    "source": [
-    "df['age']"
+    "df[\"age\"]"
    ]
   },
   {
@@ -836,7 +836,7 @@
     }
    ],
    "source": [
-    "df['age'].sort_values()"
+    "df[\"age\"].sort_values()"
    ]
   },
   {
@@ -1230,8 +1230,8 @@
     }
    ],
    "source": [
-    "df['age2'] = df['age'].sort_values(ascending=False)\n",
-    "df[['age', 'age2']]# auto aligned by index"
+    "df[\"age2\"] = df[\"age\"].sort_values(ascending=False)\n",
+    "df[[\"age\", \"age2\"]]  # auto aligned by index"
    ]
   },
   {
@@ -1484,7 +1484,7 @@
     }
    ],
    "source": [
-    "df.sort_values('age')['age']"
+    "df.sort_values(\"age\")[\"age\"]"
    ]
   },
   {
@@ -1737,7 +1737,9 @@
     }
    ],
    "source": [
-    "df.sort_values('age')['age'].fillna(30).rank(method='min') # value is changed, but index is kept"
+    "df.sort_values(\"age\")[\"age\"].fillna(30).rank(\n",
+    "    method=\"min\"\n",
+    ")  # value is changed, but index is kept"
    ]
   },
   {
@@ -2332,7 +2334,9 @@
     }
    ],
    "source": [
-    "df['age_rank_from_young'] = df.sort_values('age')['age'].fillna(30).rank(method='min')# auto aligned by index\n",
+    "df[\"age_rank_from_young\"] = (\n",
+    "    df.sort_values(\"age\")[\"age\"].fillna(30).rank(method=\"min\")\n",
+    ")  # auto aligned by index\n",
     "df"
    ]
   },
@@ -2400,7 +2404,7 @@
    ],
    "source": [
     "res = df.groupby(\"who\", dropna=False)[\"age\"].mean()\n",
-    "res# no default range index, index is 'who' values"
+    "res  # no default range index, index is 'who' values"
    ]
   },
   {
@@ -2566,8 +2570,8 @@
     }
    ],
    "source": [
-    "df['avg_age_by_who'] = res\n",
-    "df['avg_age_by_who'].describe()"
+    "df[\"avg_age_by_who\"] = res\n",
+    "df[\"avg_age_by_who\"].describe()"
    ]
   },
   {
@@ -3229,7 +3233,7 @@
     }
    ],
    "source": [
-    "df['avg_age_by_who'] = df['who'].map(res)\n",
+    "df[\"avg_age_by_who\"] = df[\"who\"].map(res)\n",
     "df"
    ]
   },
@@ -3892,7 +3896,7 @@
     }
    ],
    "source": [
-    "df['avg_age_by_who'] = df['who'].map(df.groupby(\"who\", dropna=False)[\"age\"].mean())\n",
+    "df[\"avg_age_by_who\"] = df[\"who\"].map(df.groupby(\"who\", dropna=False)[\"age\"].mean())\n",
     "df"
    ]
   },
@@ -4555,9 +4559,15 @@
     }
    ],
    "source": [
-    "df.drop(columns=['avg_age_by_who'], inplace=True)\n",
-    "df = df.merge(df.groupby(\"who\", dropna=False, as_index=False)[\"age\"].mean().rename(columns={\"age\": \"avg_age_by_who\"}), on=\"who\", how=\"left\")\n",
-    "df# awkward way"
+    "df.drop(columns=[\"avg_age_by_who\"], inplace=True)\n",
+    "df = df.merge(\n",
+    "    df.groupby(\"who\", dropna=False, as_index=False)[\"age\"]\n",
+    "    .mean()\n",
+    "    .rename(columns={\"age\": \"avg_age_by_who\"}),\n",
+    "    on=\"who\",\n",
+    "    how=\"left\",\n",
+    ")\n",
+    "df  # awkward way"
    ]
   },
   {
@@ -5274,9 +5284,9 @@
    "source": [
     "for i, grp in df.groupby([\"who\"], dropna=False):\n",
     "    print(f\"{grp = }\")\n",
-    "    m = grp['age'].mean()\n",
-    "    std = grp['age'].std()\n",
-    "    res = (grp['age'] - m )/ std\n",
+    "    m = grp[\"age\"].mean()\n",
+    "    std = grp[\"age\"].std()\n",
+    "    res = (grp[\"age\"] - m) / std\n",
     "    print(f\"{m = }\")\n",
     "    print(f\"{std = }\")\n",
     "    print(f\"{res = }\")\n",
@@ -5534,12 +5544,13 @@
    ],
    "source": [
     "def age_zscore_in_df(grp: pd.DataFrame) -> pd.Series:\n",
-    "    m = grp['age'].mean()\n",
-    "    std = grp['age'].std()\n",
-    "    res = (grp['age'] - m )/ std\n",
+    "    m = grp[\"age\"].mean()\n",
+    "    std = grp[\"age\"].std()\n",
+    "    res = (grp[\"age\"] - m) / std\n",
     "    return res\n",
     "\n",
-    "age_zscore_in_df(df.loc[lambda d: d['who'] == 'child'])"
+    "\n",
+    "age_zscore_in_df(df.loc[lambda d: d[\"who\"] == \"child\"])"
    ]
   },
   {
@@ -6348,10 +6359,12 @@
     }
    ],
    "source": [
-    "df['age_zscore'] = df.groupby(['who'], dropna=False).apply(\n",
-    "    age_zscore_in_df, include_groups=False\n",
-    ").reset_index(level=0, drop=True)\n",
-    "df# check first child against above"
+    "df[\"age_zscore\"] = (\n",
+    "    df.groupby([\"who\"], dropna=False)\n",
+    "    .apply(age_zscore_in_df, include_groups=False)\n",
+    "    .reset_index(level=0, drop=True)\n",
+    ")\n",
+    "df  # check first child against above"
    ]
   },
   {
@@ -7228,7 +7241,7 @@
    ],
    "source": [
     "# better way using transform\n",
-    "df['age_zscore_v2'] = df.groupby(['who'], dropna=False)['age'].transform(\n",
+    "df[\"age_zscore_v2\"] = df.groupby([\"who\"], dropna=False)[\"age\"].transform(\n",
     "    lambda x: (x - x.mean()) / x.std()\n",
     ")\n",
     "df"
@@ -8176,17 +8189,20 @@
    "source": [
     "# however if multiple columns are involved, apply is needed\n",
     "def age_zscore_in_df_complex(grp: pd.DataFrame) -> pd.Series:\n",
-    "    grp.loc[lambda d: d['fare'].isna(), 'fare'] = grp['fare'].mean()\n",
-    "    grp.loc[lambda d: d['age'].isna(), 'age'] = grp['age'].mean()\n",
+    "    grp.loc[lambda d: d[\"fare\"].isna(), \"fare\"] = grp[\"fare\"].mean()\n",
+    "    grp.loc[lambda d: d[\"age\"].isna(), \"age\"] = grp[\"age\"].mean()\n",
     "\n",
-    "    m = np.average(grp['age'], weights=grp['fare'])\n",
-    "    std = np.sqrt(np.average((grp['age'] - m)**2, weights=grp['fare']))\n",
-    "    res = (grp['age'] - m )/ std\n",
+    "    m = np.average(grp[\"age\"], weights=grp[\"fare\"])\n",
+    "    std = np.sqrt(np.average((grp[\"age\"] - m) ** 2, weights=grp[\"fare\"]))\n",
+    "    res = (grp[\"age\"] - m) / std\n",
     "    return res\n",
     "\n",
-    "df['age_zscore_complex'] = df.groupby(['who'], dropna=False).apply(\n",
-    "    age_zscore_in_df_complex, include_groups=False\n",
-    ").reset_index(level=0, drop=True)\n",
+    "\n",
+    "df[\"age_zscore_complex\"] = (\n",
+    "    df.groupby([\"who\"], dropna=False)\n",
+    "    .apply(age_zscore_in_df_complex, include_groups=False)\n",
+    "    .reset_index(level=0, drop=True)\n",
+    ")\n",
     "df"
    ]
   },
@@ -8208,7 +8224,9 @@
     }
    ],
    "source": [
-    "axes = df[['age_zscore', 'age_zscore_v2', 'age_zscore_complex']].hist(bins=30, figsize=(10, 5))"
+    "axes = df[[\"age_zscore\", \"age_zscore_v2\", \"age_zscore_complex\"]].hist(\n",
+    "    bins=30, figsize=(10, 5)\n",
+    ")"
    ]
   },
   {
@@ -8507,7 +8525,7 @@
     }
    ],
    "source": [
-    "df2['who']# A"
+    "df2[\"who\"]  # A"
    ]
   },
   {
@@ -8797,7 +8815,7 @@
     }
    ],
    "source": [
-    "df2.groupby(\"who\", dropna=False)['age'].transform('max')# B"
+    "df2.groupby(\"who\", dropna=False)[\"age\"].transform(\"max\")  # B"
    ]
   },
   {
@@ -8826,7 +8844,7 @@
     "for i, grp in df2.groupby(\"who\", dropna=False):\n",
     "    print(f\"{i = }\")\n",
     "    print(f\"{grp.shape = }\")\n",
-    "    wavg = (grp['age'] * grp['fare']).sum() / grp['fare'].sum()\n",
+    "    wavg = (grp[\"age\"] * grp[\"fare\"]).sum() / grp[\"fare\"].sum()\n",
     "    print(f\"{wavg = }\")"
    ]
   },
@@ -9081,10 +9099,10 @@
    ],
    "source": [
     "(\n",
-    "    df2\n",
-    "    .groupby(\"who\", dropna=False)['age']\n",
-    "    .transform(lambda x: (x * df2.loc[x.index,'fare']).sum() / df2.loc[x.index,'fare'].sum())\n",
-    ")\n"
+    "    df2.groupby(\"who\", dropna=False)[\"age\"].transform(\n",
+    "        lambda x: (x * df2.loc[x.index, \"fare\"]).sum() / df2.loc[x.index, \"fare\"].sum()\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -9350,9 +9368,9 @@
    ],
    "source": [
     "(\n",
-    "    df2\n",
-    "    .groupby(\"who\", dropna=False)['age']\n",
-    "    .transform(lambda x: print(f\"{type(x) = }, {x.shape = }, {x.head(1) = }\"))\n",
+    "    df2.groupby(\"who\", dropna=False)[\"age\"].transform(\n",
+    "        lambda x: print(f\"{type(x) = }, {x.shape = }, {x.head(1) = }\")\n",
+    "    )\n",
     ")"
    ]
   },
@@ -9617,6 +9635,7 @@
     "def weighted_avg(group):\n",
     "    return (group[\"age\"] * group[\"fare\"]).sum() / group[\"fare\"].sum()\n",
     "\n",
+    "\n",
     "# compute weighted average per group and map it back to each row\n",
     "wavg_by_who = df2.groupby(\"who\", dropna=False).apply(weighted_avg)\n",
     "df2[\"weighted_avg_age_in_who\"] = df2[\"who\"].map(wavg_by_who)\n",
@@ -9706,7 +9725,7 @@
     }
    ],
    "source": [
-    "type(lambda x:x)"
+    "type(lambda x: x)"
    ]
   },
   {
@@ -9727,7 +9746,7 @@
     }
    ],
    "source": [
-    "(lambda x: x+1)(1)"
+    "(lambda x: x + 1)(1)"
    ]
   },
   {
@@ -9737,7 +9756,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "func = (lambda x: x+1)"
+    "func = lambda x: x + 1"
    ]
   },
   {
@@ -9781,6 +9800,8 @@
    "source": [
     "def func(x):\n",
     "    return x + 1\n",
+    "\n",
+    "\n",
     "func(1)"
    ]
   },
@@ -10657,7 +10678,7 @@
     }
    ],
    "source": [
-    "df2.loc[df['fare'] < 10]"
+    "df2.loc[df[\"fare\"] < 10]"
    ]
   },
   {
@@ -10910,7 +10931,7 @@
     }
    ],
    "source": [
-    "df['fare'] < 10"
+    "df[\"fare\"] < 10"
    ]
   },
   {
@@ -11786,7 +11807,7 @@
     }
    ],
    "source": [
-    "df2.loc[lambda x: x['fare'] < 10 ,:]"
+    "df2.loc[lambda x: x[\"fare\"] < 10, :]"
    ]
   },
   {
@@ -12073,7 +12094,7 @@
     }
    ],
    "source": [
-    "col = 'fare'\n",
+    "col = \"fare\"\n",
     "bins = [0, 10, 20, 30, 100]\n",
     "\n",
     "res = pd.Series(index=df.index, dtype=object)\n",
@@ -12089,7 +12110,7 @@
     "    #     res.loc[(df[col] >= bins[i - 1]) & (df[col] < bin_edge)] = (\n",
     "    #         f\"[{bins[i-1]},{bin_edge})\"\n",
     "    #     )\n",
-    "    \n",
+    "\n",
     "# res.loc[df[col] >= bins[-1]] = f\"[{bins[-1]},Inf)\"\n",
     "\n",
     "res"
@@ -12495,7 +12516,7 @@
     }
    ],
    "source": [
-    "stats.norm.fit([-0.5,0,0.5])"
+    "stats.norm.fit([-0.5, 0, 0.5])"
    ]
   },
   {
@@ -12681,7 +12702,9 @@
    "source": [
     "n_cols = 3\n",
     "colnames = [f\"rv_{i}\" for i in range(1, n_cols + 1)]\n",
-    "df[colnames] = stats.norm.rvs(loc=2, scale=5, size=df.shape[0] * n_cols).reshape(df.shape[0], n_cols)\n",
+    "df[colnames] = stats.norm.rvs(loc=2, scale=5, size=df.shape[0] * n_cols).reshape(\n",
+    "    df.shape[0], n_cols\n",
+    ")\n",
     "df[colnames].head()"
    ]
   },
@@ -12830,9 +12853,9 @@
     }
    ],
    "source": [
-    "func = lambda x,y,z: x + y + z\n",
+    "func = lambda x, y, z: x + y + z\n",
     "\n",
-    "func(1,2,3)"
+    "func(1, 2, 3)"
    ]
   },
   {
@@ -12853,7 +12876,7 @@
     }
    ],
    "source": [
-    "func(*[1,2,3])"
+    "func(*[1, 2, 3])"
    ]
   },
   {
