--- a/data_related/pandas_related/intro/analytics_example/pd_analytics_blanks.ipynb
+++ b/data_related/pandas_related/intro/analytics_example/pd_analytics_blanks.ipynb
@@ -146,10 +146,7 @@
    "outputs": [],
    "source": [
     "df2[\"cumcount_in_who_by_fare\"] = (\n",
-    "    df2.____([\"fare\", \"id\"], na_position=\"last\")\n",
-    "    .groupby(\"who\", dropna=False)\n",
-    "    .____()\n",
-    "    + 1\n",
+    "    df2.____([\"fare\", \"id\"], na_position=\"last\").groupby(\"who\", dropna=False).____() + 1\n",
     ")"
    ]
   },
@@ -301,9 +298,7 @@
     "    .groupby(\"who\", dropna=False)\n",
     "    .____()\n",
     "    + 1,\n",
-    "    age_of_lowest_fare_in_who=lambda x: x.____(\n",
-    "        [\"fare\", \"id\"], na_position=\"last\"\n",
-    "    )\n",
+    "    age_of_lowest_fare_in_who=lambda x: x.____([\"fare\", \"id\"], na_position=\"last\")\n",
     "    .groupby(\"who\", dropna=False)[\"age\"]\n",
     "    .transform(____),\n",
     "    fare_bin=lambda x: make_bins(x, \"fare\", bins=bins),\n",
