--- a/data_related/pandas_related/intro/intro.ipynb
+++ b/data_related/pandas_related/intro/intro.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "import yfinance as yf\n",
     "\n",
-    "tk = yf.Tickers(['^IXIC','^GSPC'])\n",
+    "tk = yf.Tickers([\"^IXIC\", \"^GSPC\"])\n",
     "df = tk.history(period=\"max\", interval=\"1h\", auto_adjust=False)\n",
     "\n",
     "print(f\"{df.shape = }\")\n",
@@ -89,8 +89,8 @@
     }
    ],
    "source": [
-    "ndq_bars = df.xs('^IXIC', level=1, axis=1)\n",
-    "ndq_bars.columns = [c.lower().replace(' ', '_') for c in ndq_bars.columns]\n",
+    "ndq_bars = df.xs(\"^IXIC\", level=1, axis=1)\n",
+    "ndq_bars.columns = [c.lower().replace(\" \", \"_\") for c in ndq_bars.columns]\n",
     "print(ndq_bars.shape)\n",
     "print(ndq_bars.head().to_string())"
    ]
@@ -117,8 +117,8 @@
     }
    ],
    "source": [
-    "snp_bars = df.xs('^GSPC', level=1, axis=1)\n",
-    "snp_bars.columns = [c.lower().replace(' ', '_') for c in snp_bars.columns]\n",
+    "snp_bars = df.xs(\"^GSPC\", level=1, axis=1)\n",
+    "snp_bars.columns = [c.lower().replace(\" \", \"_\") for c in snp_bars.columns]\n",
     "print(snp_bars.shape)\n",
     "print(snp_bars.head().to_string())"
    ]
@@ -148,10 +148,10 @@
     "import pandas_datareader.data as web\n",
     "import datetime\n",
     "\n",
-    "start = snp_bars.index.min().date() - datetime.timedelta(days=365/2)\n",
+    "start = snp_bars.index.min().date() - datetime.timedelta(days=365 / 2)\n",
     "end = snp_bars.index.max().date()\n",
     "\n",
-    "econs = web.DataReader(['GDP','UNRATE','CPIAUCSL','FEDFUNDS'], 'fred', start, end)\n",
+    "econs = web.DataReader([\"GDP\", \"UNRATE\", \"CPIAUCSL\", \"FEDFUNDS\"], \"fred\", start, end)\n",
     "print(econs.shape)\n",
     "print(econs.head().to_string())"
    ]
@@ -511,7 +511,7 @@
     }
    ],
    "source": [
-    "snp_bars.loc['2024-12-31']"
+    "snp_bars.loc[\"2024-12-31\"]"
    ]
   },
   {
@@ -877,7 +877,7 @@
     }
    ],
    "source": [
-    "snp_bars.at_time(datetime.time(14,30)).head(10)"
+    "snp_bars.at_time(datetime.time(14, 30)).head(10)"
    ]
   },
   {
@@ -955,7 +955,7 @@
     }
    ],
    "source": [
-    "snp_bars.close['2025-10-31']"
+    "snp_bars.close[\"2025-10-31\"]"
    ]
   },
   {
@@ -1609,7 +1609,7 @@
     }
    ],
    "source": [
-    "mth_mean = snp_bars.close.resample('ME').agg(['mean', 'median', 'std'])\n",
+    "mth_mean = snp_bars.close.resample(\"ME\").agg([\"mean\", \"median\", \"std\"])\n",
     "mth_mean"
    ]
   },
@@ -1672,19 +1672,34 @@
     }
    ],
    "source": [
-    "mth_mean['mean_upper'] = mth_mean['mean'] + mth_mean['std']\n",
-    "mth_mean['mean_lower'] = mth_mean['mean'] - mth_mean['std']\n",
-    "mth_mean['median_upper'] = mth_mean['median'] + mth_mean['std']\n",
-    "mth_mean['median_lower'] = mth_mean['median'] - mth_mean['std']\n",
+    "mth_mean[\"mean_upper\"] = mth_mean[\"mean\"] + mth_mean[\"std\"]\n",
+    "mth_mean[\"mean_lower\"] = mth_mean[\"mean\"] - mth_mean[\"std\"]\n",
+    "mth_mean[\"median_upper\"] = mth_mean[\"median\"] + mth_mean[\"std\"]\n",
+    "mth_mean[\"median_lower\"] = mth_mean[\"median\"] - mth_mean[\"std\"]\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(12, 6))\n",
-    "ax.plot(mth_mean.index, mth_mean[['mean','median']], label=['Mean','Median'])\n",
-    "ax.plot(mth_mean.index, mth_mean[['mean_upper','mean_lower']], linestyle='--', color='C0', alpha=0.5, label='Mean ± 1 STD')\n",
-    "ax.fill_between(mth_mean.index, mth_mean['mean_lower'], mth_mean['mean_upper'], color='C0', alpha=0.1)\n",
+    "ax.plot(mth_mean.index, mth_mean[[\"mean\", \"median\"]], label=[\"Mean\", \"Median\"])\n",
+    "ax.plot(\n",
+    "    mth_mean.index,\n",
+    "    mth_mean[[\"mean_upper\", \"mean_lower\"]],\n",
+    "    linestyle=\"--\",\n",
+    "    color=\"C0\",\n",
+    "    alpha=0.5,\n",
+    "    label=\"Mean ± 1 STD\",\n",
+    ")\n",
+    "ax.fill_between(\n",
+    "    mth_mean.index,\n",
+    "    mth_mean[\"mean_lower\"],\n",
+    "    mth_mean[\"mean_upper\"],\n",
+    "    color=\"C0\",\n",
+    "    alpha=0.1,\n",
+    ")\n",
     "\n",
     "ax.legend()\n",
     "ax.grid()\n",
-    "ax.set_title('S&P 500 Monthly Close Price Mean and Median with Standard Deviation Bands')"
+    "ax.set_title(\n",
+    "    \"S&P 500 Monthly Close Price Mean and Median with Standard Deviation Bands\"\n",
+    ")"
    ]
   },
   {
@@ -2039,8 +2054,8 @@
    ],
    "source": [
     "hourly_returns = snp_bars.close.pct_change()\n",
-    "std_10day = hourly_returns.rolling(window=10*7).std()\n",
-    "std_10day.resample('B').last().plot()"
+    "std_10day = hourly_returns.rolling(window=10 * 7).std()\n",
+    "std_10day.resample(\"B\").last().plot()"
    ]
   },
   {
@@ -2462,8 +2477,8 @@
    "source": [
     "f1 = snp_bars.close.sample(frac=0.9, random_state=42)\n",
     "f2 = ndq_bars.close.sample(frac=0.95, random_state=42)\n",
-    "    \n",
-    "both = pd.concat([f1, f2],axis=1, keys=['snp','ndq'])\n",
+    "\n",
+    "both = pd.concat([f1, f2], axis=1, keys=[\"snp\", \"ndq\"])\n",
     "both.head()"
    ]
   },
@@ -2774,7 +2789,7 @@
    ],
    "source": [
     "df = both.head(20).copy()\n",
-    "df['ndq'] = df['ndq'].sample(frac=0.9, random_state=42)\n",
+    "df[\"ndq\"] = df[\"ndq\"].sample(frac=0.9, random_state=42)\n",
     "df"
    ]
   },
@@ -3271,7 +3286,7 @@
     }
    ],
    "source": [
-    "df.dropna(how='all')"
+    "df.dropna(how=\"all\")"
    ]
   },
   {
@@ -4240,7 +4255,7 @@
     }
    ],
    "source": [
-    "df.asfreq('4h')"
+    "df.asfreq(\"4h\")"
    ]
   },
   {
@@ -4607,7 +4622,7 @@
     }
    ],
    "source": [
-    "df.asfreq('4h').ffill(limit=2)"
+    "df.asfreq(\"4h\").ffill(limit=2)"
    ]
   },
   {
@@ -4626,18 +4641,27 @@
    "outputs": [],
    "source": [
     "Nfull = 2_000\n",
-    "def random_ascii_letters(size):\n",
-    "    return ''.join(np.random.choice(list('abcdefghijklmnopqrstuvwxyz'), size=size))\n",
     "\n",
-    "tickers = np.array(list(random_ascii_letters(5).upper() for _ in range(Nfull)), dtype='object')\n",
+    "\n",
+    "def random_ascii_letters(size):\n",
+    "    return \"\".join(np.random.choice(list(\"abcdefghijklmnopqrstuvwxyz\"), size=size))\n",
+    "\n",
+    "\n",
+    "tickers = np.array(\n",
+    "    list(random_ascii_letters(5).upper() for _ in range(Nfull)), dtype=\"object\"\n",
+    ")\n",
     "tickers = np.unique(tickers)\n",
     "Nfull = tickers.shape[0]\n",
     "\n",
-    "ind_names = np.array(['ENERGY','TECH','HEALTH','FINANCE','RETAIL','UTILITIES'], dtype='object')\n",
-    "industries = pd.Series(np.random.choice(ind_names, size=Nfull), index=tickers,name='industry')\n",
+    "ind_names = np.array(\n",
+    "    [\"ENERGY\", \"TECH\", \"HEALTH\", \"FINANCE\", \"RETAIL\", \"UTILITIES\"], dtype=\"object\"\n",
+    ")\n",
+    "industries = pd.Series(\n",
+    "    np.random.choice(ind_names, size=Nfull), index=tickers, name=\"industry\"\n",
+    ")\n",
     "\n",
-    "ccys = np.array(['USD','EUR','JPY','GBP','AUD','CAD'], dtype='object')\n",
-    "ccy = pd.Series(np.random.choice(ccys, size=Nfull), index=tickers,name='currency')"
+    "ccys = np.array([\"USD\", \"EUR\", \"JPY\", \"GBP\", \"AUD\", \"CAD\"], dtype=\"object\")\n",
+    "ccy = pd.Series(np.random.choice(ccys, size=Nfull), index=tickers, name=\"currency\")"
    ]
   },
   {
@@ -4662,10 +4686,14 @@
    ],
    "source": [
     "N = 1000\n",
-    "df = pd.DataFrame({'momentum': np.random.randn(N)/200 + 0.03,\n",
-    "                   'value': np.random.randn(N)/200 + 0.08,\n",
-    "                   'short_interest': np.random.randn(N)/200 - 0.02,\n",
-    "                   }, index = np.random.choice(tickers, size=N, replace=False))\n",
+    "df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"momentum\": np.random.randn(N) / 200 + 0.03,\n",
+    "        \"value\": np.random.randn(N) / 200 + 0.08,\n",
+    "        \"short_interest\": np.random.randn(N) / 200 - 0.02,\n",
+    "    },\n",
+    "    index=np.random.choice(tickers, size=N, replace=False),\n",
+    ")\n",
     "print(df.shape)\n",
     "print(df.head().to_string())"
    ]
@@ -4987,8 +5015,10 @@
     }
    ],
    "source": [
-    "ind_sub = industries.take(np.random.choice(range(len(industries)), size=10, replace=False))\n",
-    "means = df.groupby(ind_sub,dropna=False).mean()\n",
+    "ind_sub = industries.take(\n",
+    "    np.random.choice(range(len(industries)), size=10, replace=False)\n",
+    ")\n",
+    "means = df.groupby(ind_sub, dropna=False).mean()\n",
     "means"
    ]
   },
@@ -5020,7 +5050,7 @@
     }
    ],
    "source": [
-    "means.plot(kind='barh')"
+    "means.plot(kind=\"barh\")"
    ]
   },
   {
@@ -7427,7 +7457,7 @@
     }
    ],
    "source": [
-    "normed.groupby([industries, ccy]).agg(['mean','std'])"
+    "normed.groupby([industries, ccy]).agg([\"mean\", \"std\"])"
    ]
   },
   {
@@ -8246,7 +8276,7 @@
     }
    ],
    "source": [
-    "means['momentum']"
+    "means[\"momentum\"]"
    ]
   },
   {
@@ -8412,7 +8442,7 @@
     }
    ],
    "source": [
-    "means.xs('TECH')"
+    "means.xs(\"TECH\")"
    ]
   },
   {
@@ -9146,7 +9176,7 @@
     }
    ],
    "source": [
-    "means.stack().unstack('industry')"
+    "means.stack().unstack(\"industry\")"
    ]
   },
   {
@@ -9333,8 +9363,8 @@
    ],
    "source": [
     "df2 = df.copy()\n",
-    "df2['industry'] = industries\n",
-    "df2 = df2.reset_index(names=['ticker'])\n",
+    "df2[\"industry\"] = industries\n",
+    "df2 = df2.reset_index(names=[\"ticker\"])\n",
     "df2.head()"
    ]
   },
@@ -9481,7 +9511,9 @@
     }
    ],
    "source": [
-    "industry_info = df.groupby(industries, as_index=False)['momentum'].agg(**{'avg_momentum': 'mean', 'std_momentum': 'std'})\n",
+    "industry_info = df.groupby(industries, as_index=False)[\"momentum\"].agg(\n",
+    "    **{\"avg_momentum\": \"mean\", \"std_momentum\": \"std\"}\n",
+    ")\n",
     "industry_info.head()"
    ]
   },
@@ -9612,7 +9644,7 @@
     }
    ],
    "source": [
-    "ccy2 = ccy.rename_axis('ticker').reset_index()\n",
+    "ccy2 = ccy.rename_axis(\"ticker\").reset_index()\n",
     "ccy2.head()"
    ]
   },
@@ -10444,7 +10476,7 @@
     }
    ],
    "source": [
-    "ind_counts = data.groupby('industry').size()\n",
+    "ind_counts = data.groupby(\"industry\").size()\n",
     "freq_inds = ind_counts.index[ind_counts >= 165]\n",
     "freq_inds"
    ]
@@ -10509,7 +10541,7 @@
     }
    ],
    "source": [
-    "highest_momentum = data.groupby('industry')['momentum'].mean()[freq_inds].sort_index()\n",
+    "highest_momentum = data.groupby(\"industry\")[\"momentum\"].mean()[freq_inds].sort_index()\n",
     "highest_momentum"
    ]
   },
@@ -10695,8 +10727,8 @@
     }
    ],
    "source": [
-    "filtered = data[data['industry'].isin(highest_momentum.index)]\n",
-    "filtered.groupby(['industry','currency']).momentum.mean().unstack()"
+    "filtered = data[data[\"industry\"].isin(highest_momentum.index)]\n",
+    "filtered.groupby([\"industry\", \"currency\"]).momentum.mean().unstack()"
    ]
   },
   {
@@ -10950,7 +10982,9 @@
     }
    ],
    "source": [
-    "data.pivot_table(index='industry',columns='currency',aggfunc='mean',values='momentum')"
+    "data.pivot_table(\n",
+    "    index=\"industry\", columns=\"currency\", aggfunc=\"mean\", values=\"momentum\"\n",
+    ")"
    ]
   },
   {
@@ -11363,7 +11397,7 @@
     }
    ],
    "source": [
-    "by_currency = data.groupby('currency')['momentum'].describe()\n",
+    "by_currency = data.groupby(\"currency\")[\"momentum\"].describe()\n",
     "by_currency"
    ]
   },
