--- a/data_related/pandas_related/timeseries_related/ts_factors.ipynb
+++ b/data_related/pandas_related/timeseries_related/ts_factors.ipynb
@@ -278,22 +278,22 @@
    "source": [
     "para = 14\n",
     "\n",
-    "snp_bars[f'rsi_{para}'] = talib.RSI(snp_bars['close'], timeperiod=para)\n",
+    "snp_bars[f\"rsi_{para}\"] = talib.RSI(snp_bars[\"close\"], timeperiod=para)\n",
     "\n",
     "pdf = snp_bars.tail(365)\n",
-    "fig, ax = plt.subplots(figsize=(12,6))\n",
-    "ax.plot(pdf.index, pdf['close'], color='blue', label='Close Price')\n",
+    "fig, ax = plt.subplots(figsize=(12, 6))\n",
+    "ax.plot(pdf.index, pdf[\"close\"], color=\"blue\", label=\"Close Price\")\n",
     "ax2 = ax.twinx()\n",
-    "ax2.plot(pdf.index, pdf[f'rsi_{para}'], color='black', label=f'RSI {para}')\n",
-    "ax2.axhline(70, color='red', linestyle='--')\n",
-    "ax2.axhline(30, color='green', linestyle='--')\n",
+    "ax2.plot(pdf.index, pdf[f\"rsi_{para}\"], color=\"black\", label=f\"RSI {para}\")\n",
+    "ax2.axhline(70, color=\"red\", linestyle=\"--\")\n",
+    "ax2.axhline(30, color=\"green\", linestyle=\"--\")\n",
     "\n",
-    "ax.set_title(f'S&P 500 Closing Prices with RSI {para}')\n",
-    "ax2.set_ylabel(f'RSI {para}')\n",
-    "ax.legend(loc='upper left')\n",
-    "ax2.legend(loc='upper right')\n",
+    "ax.set_title(f\"S&P 500 Closing Prices with RSI {para}\")\n",
+    "ax2.set_ylabel(f\"RSI {para}\")\n",
+    "ax.legend(loc=\"upper left\")\n",
+    "ax2.legend(loc=\"upper right\")\n",
     "ax.xaxis.set_major_locator(mpl.dates.DayLocator(interval=30))\n",
-    "ax.tick_params(axis='x', rotation=45)\n",
+    "ax.tick_params(axis=\"x\", rotation=45)\n",
     "ax.grid(True)\n",
     "plt.tight_layout()"
    ]
@@ -319,31 +319,28 @@
     "paras = (12, 26, 9)\n",
     "para_comb = \"_\".join(map(str, paras))\n",
     "\n",
-    "_, snp_bars[f'macd_sig_{para_comb}'], snp_bars[f'macd_hist_{para_comb}'] =talib.MACD(\n",
-    "    snp_bars['close'],\n",
-    "    fastperiod=paras[0],\n",
-    "    slowperiod=paras[1],\n",
-    "    signalperiod=paras[2]\n",
+    "_, snp_bars[f\"macd_sig_{para_comb}\"], snp_bars[f\"macd_hist_{para_comb}\"] = talib.MACD(\n",
+    "    snp_bars[\"close\"], fastperiod=paras[0], slowperiod=paras[1], signalperiod=paras[2]\n",
     ")\n",
     "snp_bars[f\"ema_{paras[0]}\"] = talib.EMA(snp_bars[\"close\"], timeperiod=paras[0])\n",
     "snp_bars[f\"ema_{paras[1]}\"] = talib.EMA(snp_bars[\"close\"], timeperiod=paras[1])\n",
     "\n",
     "pdf = snp_bars.tail(180)\n",
-    "fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(12,8), sharex=True)\n",
+    "fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(12, 8), sharex=True)\n",
     "\n",
-    "ax1.plot(pdf.index, pdf['close'], color='blue', label='Close Price')\n",
-    "ax1.plot(pdf.index, pdf[f'ema_{paras[0]}'], color='orange', label=f'EMA {paras[0]}')\n",
-    "ax1.plot(pdf.index, pdf[f'ema_{paras[1]}'], color='green', label=f'EMA {paras[1]}')\n",
-    "ax1.legend(loc='upper left')\n",
-    "ax1.set_title('S&P 500 Closing Prices')\n",
+    "ax1.plot(pdf.index, pdf[\"close\"], color=\"blue\", label=\"Close Price\")\n",
+    "ax1.plot(pdf.index, pdf[f\"ema_{paras[0]}\"], color=\"orange\", label=f\"EMA {paras[0]}\")\n",
+    "ax1.plot(pdf.index, pdf[f\"ema_{paras[1]}\"], color=\"green\", label=f\"EMA {paras[1]}\")\n",
+    "ax1.legend(loc=\"upper left\")\n",
+    "ax1.set_title(\"S&P 500 Closing Prices\")\n",
     "ax1.grid(True)\n",
     "\n",
-    "ax2.plot(pdf.index, pdf[f'macd_sig_{para_comb}'], color='orange', label='MACD Signal')\n",
-    "ax2.bar(pdf.index, pdf[f'macd_hist_{para_comb}'], color='gray', label='MACD Histogram')\n",
-    "ax2.set_title(f'MACD with parameters {para_comb}')\n",
-    "ax2.legend(loc='upper left')\n",
+    "ax2.plot(pdf.index, pdf[f\"macd_sig_{para_comb}\"], color=\"orange\", label=\"MACD Signal\")\n",
+    "ax2.bar(pdf.index, pdf[f\"macd_hist_{para_comb}\"], color=\"gray\", label=\"MACD Histogram\")\n",
+    "ax2.set_title(f\"MACD with parameters {para_comb}\")\n",
+    "ax2.legend(loc=\"upper left\")\n",
     "ax2.xaxis.set_major_locator(mpl.dates.DayLocator(interval=30))\n",
-    "ax2.tick_params(axis='x', rotation=45)\n",
+    "ax2.tick_params(axis=\"x\", rotation=45)\n",
     "ax2.grid(True)\n",
     "\n",
     "plt.tight_layout()"
