--- a/data_related/pandas_related/timeseries_related/ts_related_basics.ipynb
+++ b/data_related/pandas_related/timeseries_related/ts_related_basics.ipynb
@@ -58,7 +58,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# pandas time series operations\n",
     "#################################\n",
     "\n",
@@ -91,7 +90,7 @@
     "\n",
     "# iterate over a expanding window, get the dataframe\n",
     "for i in e:\n",
-    "    print(i)\n"
+    "    print(i)"
    ]
   },
   {
@@ -109,7 +108,7 @@
     "df.diff(4)\n",
     "\n",
     "# pct_change\n",
-    "df.pct_change(3)\n"
+    "df.pct_change(3)"
    ]
   },
   {
@@ -153,8 +152,7 @@
     "np.argmax([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
     "\n",
     "# rolling apply np argmin\n",
-    "df.apply(lambda x: x.rolling(3).apply(lambda y: y.argmin()))\n",
-    "\n"
+    "df.apply(lambda x: x.rolling(3).apply(lambda y: y.argmin()))"
    ]
   },
   {
@@ -164,7 +162,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# monthly to quarterly\n",
     "# #################################\n",
     "\n",
@@ -184,7 +181,7 @@
     "df\n",
     "\n",
     "df.resample(\"QS\").first()\n",
-    "df.resample(\"QS\").last()\n"
+    "df.resample(\"QS\").last()"
    ]
   },
   {
