--- a/generics_n_builtins/str_related/intro_fill_in_blanks/str_list_dict_noblanks.ipynb
+++ b/generics_n_builtins/str_related/intro_fill_in_blanks/str_list_dict_noblanks.ipynb
@@ -14,14 +14,14 @@
    "outputs": [],
    "source": [
     "lst = [\n",
-    "    'ebit',\n",
-    "    'ebitda',\n",
-    "    'net_income',\n",
+    "    \"ebit\",\n",
+    "    \"ebitda\",\n",
+    "    \"net_income\",\n",
     "]\n",
     "\n",
     "lst2 = [\n",
-    "    'net_income',\n",
-    "    'operating_income',\n",
+    "    \"net_income\",\n",
+    "    \"operating_income\",\n",
     "    \"total_assets\",\n",
     "]"
    ]
@@ -176,7 +176,7 @@
     }
    ],
    "source": [
-    "'schema.table'.split('.')"
+    "\"schema.table\".split(\".\")"
    ]
   },
   {
@@ -196,8 +196,8 @@
     }
    ],
    "source": [
-    "a = 'schema'\n",
-    "b = 'table'\n",
+    "a = \"schema\"\n",
+    "b = \"table\"\n",
     "c = f\"{a}.{b}\"\n",
     "c"
    ]
@@ -238,7 +238,7 @@
     }
    ],
    "source": [
-    "_ =\",\".join(lst)\n",
+    "_ = \",\".join(lst)\n",
     "print(_)"
    ]
   },
@@ -322,7 +322,7 @@
     }
    ],
    "source": [
-    "[i.replace('WOE_', '') for i in woes]"
+    "[i.replace(\"WOE_\", \"\") for i in woes]"
    ]
   },
   {
@@ -342,7 +342,7 @@
     }
    ],
    "source": [
-    "[i for i in lst if '_' in i]"
+    "[i for i in lst if \"_\" in i]"
    ]
   },
   {
@@ -362,7 +362,7 @@
     }
    ],
    "source": [
-    "[i for i in woes + [\"NOT_WOE\"] if i.startswith('WOE_')]"
+    "[i for i in woes + [\"NOT_WOE\"] if i.startswith(\"WOE_\")]"
    ]
   },
   {
@@ -486,8 +486,8 @@
    "source": [
     "import re\n",
     "\n",
-    "p = re.compile(r'([^_]+)_(.+)')\n",
-    "p.search('scr_net_income').group()"
+    "p = re.compile(r\"([^_]+)_(.+)\")\n",
+    "p.search(\"scr_net_income\").group()"
    ]
   },
   {
@@ -507,7 +507,7 @@
     }
    ],
    "source": [
-    "p.search('scr_net_income').groups()"
+    "p.search(\"scr_net_income\").groups()"
    ]
   },
   {
@@ -527,7 +527,7 @@
     }
    ],
    "source": [
-    "p.search('scr') == None"
+    "p.search(\"scr\") == None"
    ]
   },
   {
@@ -546,10 +546,10 @@
     }
    ],
    "source": [
-    "p = re.compile(r'(scr|woe)_(.+)')\n",
-    "print(p.search('scr_net_income').groups())\n",
-    "print(p.search('woe_net_income').groups())\n",
-    "print(p.search('net_income') == None)"
+    "p = re.compile(r\"(scr|woe)_(.+)\")\n",
+    "print(p.search(\"scr_net_income\").groups())\n",
+    "print(p.search(\"woe_net_income\").groups())\n",
+    "print(p.search(\"net_income\") == None)"
    ]
   },
   {
@@ -567,11 +567,13 @@
     }
    ],
    "source": [
-    "p = re.compile(r'scr|woe_.+',)\n",
+    "p = re.compile(\n",
+    "    r\"scr|woe_.+\",\n",
+    ")\n",
     "for col in [\n",
-    "    'scr_net_income',\n",
-    "    'woe_net_income',\n",
-    "    'net_income',\n",
+    "    \"scr_net_income\",\n",
+    "    \"woe_net_income\",\n",
+    "    \"net_income\",\n",
     "]:\n",
     "    if p.search(col):\n",
     "        print(p.search(col).group())"
