--- a/math_related/simulation/box_muller.ipynb
+++ b/math_related/simulation/box_muller.ipynb
@@ -10,19 +10,21 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
     "def box_muller(n_samples=10000):\n",
     "    # Generate uniform random numbers\n",
     "    u1 = np.random.uniform(0, 1, n_samples)\n",
     "    u2 = np.random.uniform(0, 1, n_samples)\n",
-    "    \n",
+    "\n",
     "    # Box-Muller transformation\n",
     "    z1 = np.sqrt(-2 * np.log(u1)) * np.cos(2 * np.pi * u2)\n",
     "    z2 = np.sqrt(-2 * np.log(u1)) * np.sin(2 * np.pi * u2)\n",
-    "    \n",
+    "\n",
     "    return z1, z2\n",
     "\n",
+    "\n",
     "# Generate samples\n",
-    "z1, z2 = box_muller(10000)\n"
+    "z1, z2 = box_muller(10000)"
    ]
   },
   {
@@ -43,33 +45,39 @@
     }
    ],
    "source": [
-    "\n",
     "# Plot to verify normality\n",
     "fig, axes = plt.subplots(2, 2, figsize=(12, 8))\n",
     "\n",
     "# Histograms\n",
-    "axes[0,0].hist(z1, bins=50, alpha=0.7, density=True, label='Box-Muller Z1')\n",
-    "axes[0,0].plot(np.linspace(-4, 4, 100), \n",
-    "               (1/np.sqrt(2*np.pi)) * np.exp(-0.5 * np.linspace(-4, 4, 100)**2), \n",
-    "               'r-', label='N(0,1)')\n",
-    "axes[0,0].set_title('Box-Muller Z1')\n",
-    "axes[0,0].legend()\n",
+    "axes[0, 0].hist(z1, bins=50, alpha=0.7, density=True, label=\"Box-Muller Z1\")\n",
+    "axes[0, 0].plot(\n",
+    "    np.linspace(-4, 4, 100),\n",
+    "    (1 / np.sqrt(2 * np.pi)) * np.exp(-0.5 * np.linspace(-4, 4, 100) ** 2),\n",
+    "    \"r-\",\n",
+    "    label=\"N(0,1)\",\n",
+    ")\n",
+    "axes[0, 0].set_title(\"Box-Muller Z1\")\n",
+    "axes[0, 0].legend()\n",
     "\n",
-    "axes[0,1].hist(z2, bins=50, alpha=0.7, density=True, label='Box-Muller Z2')\n",
-    "axes[0,1].plot(np.linspace(-4, 4, 100), \n",
-    "               (1/np.sqrt(2*np.pi)) * np.exp(-0.5 * np.linspace(-4, 4, 100)**2), \n",
-    "               'r-', label='N(0,1)')\n",
-    "axes[0,1].set_title('Box-Muller Z2')\n",
-    "axes[0,1].legend()\n",
+    "axes[0, 1].hist(z2, bins=50, alpha=0.7, density=True, label=\"Box-Muller Z2\")\n",
+    "axes[0, 1].plot(\n",
+    "    np.linspace(-4, 4, 100),\n",
+    "    (1 / np.sqrt(2 * np.pi)) * np.exp(-0.5 * np.linspace(-4, 4, 100) ** 2),\n",
+    "    \"r-\",\n",
+    "    label=\"N(0,1)\",\n",
+    ")\n",
+    "axes[0, 1].set_title(\"Box-Muller Z2\")\n",
+    "axes[0, 1].legend()\n",
     "\n",
     "\n",
     "# Q-Q plots\n",
     "from scipy import stats\n",
-    "stats.probplot(z1, dist=\"norm\", plot=axes[1,0])\n",
-    "axes[1,0].set_title('Q-Q Plot Z1')\n",
     "\n",
-    "stats.probplot(z2, dist=\"norm\", plot=axes[1,1])\n",
-    "axes[1,1].set_title('Q-Q Plot Z2')\n",
+    "stats.probplot(z1, dist=\"norm\", plot=axes[1, 0])\n",
+    "axes[1, 0].set_title(\"Q-Q Plot Z1\")\n",
+    "\n",
+    "stats.probplot(z2, dist=\"norm\", plot=axes[1, 1])\n",
+    "axes[1, 1].set_title(\"Q-Q Plot Z2\")\n",
     "\n",
     "plt.tight_layout()"
    ]
@@ -90,7 +98,6 @@
     }
    ],
    "source": [
-    "\n",
     "print(f\"Z1: Mean={np.mean(z1):.3f}, Std={np.std(z1):.3f}\")\n",
     "print(f\"Z2: Mean={np.mean(z2):.3f}, Std={np.std(z2):.3f}\")"
    ]
