--- a/math_related/simulation/choices.ipynb
+++ b/math_related/simulation/choices.ipynb
@@ -20,7 +20,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sampling_main_secondary import sample_df_via_main_and_secondary_flags, make_sampling_summary_df, decode_flags"
+    "from sampling_main_secondary import (\n",
+    "    sample_df_via_main_and_secondary_flags,\n",
+    "    make_sampling_summary_df,\n",
+    "    decode_flags,\n",
+    ")"
    ]
   },
   {
@@ -93,9 +97,9 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('titanic.csv')\n",
+    "df = pd.read_csv(\"titanic.csv\")\n",
     "print(f\"{df.shape = }\")\n",
-    "df['who'].value_counts().div(df.shape[0])"
+    "df[\"who\"].value_counts().div(df.shape[0])"
    ]
   },
   {
@@ -159,20 +163,25 @@
     "    SURVIVED = 1 << 8\n",
     "    NOT_SURVIVED = 1 << 9\n",
     "\n",
-    "df['flags'] = 0\n",
-    "df.loc[df['who'] == 'man', 'flags'] |= int(Flags.IS_MAN)\n",
-    "df.loc[df['who'] == 'woman', 'flags'] |= int(Flags.IS_WOMAN)\n",
-    "df.loc[df['who'] == 'child', 'flags'] |= int(Flags.IS_CHILD)\n",
-    "df.loc[df['age'] < 18, 'flags'] |= int(Flags.AGE_BELOW_18)\n",
-    "df.loc[df['age'] >= 18, 'flags'] |= int(Flags.AGE_ABOVE_18)\n",
-    "df.loc[df['pclass'] == 1, 'flags'] |= int(Flags.CLASS_1)\n",
-    "df.loc[df['pclass'] == 2, 'flags'] |= int(Flags.CLASS_2)\n",
-    "df.loc[df['pclass'] == 3, 'flags'] |= int(Flags.CLASS_3)\n",
-    "df.loc[df['survived'] == 1, 'flags'] |= int(Flags.SURVIVED)\n",
-    "df.loc[df['survived'] == 0, 'flags'] |= int(Flags.NOT_SURVIVED)\n",
     "\n",
-    "df['flags_decoded'] = df['flags'].apply(lambda x: decode_flags(x, Flags))\n",
-    "print(df[['who', 'age', 'pclass', 'survived', 'flags', 'flags_decoded']].head().to_string())"
+    "df[\"flags\"] = 0\n",
+    "df.loc[df[\"who\"] == \"man\", \"flags\"] |= int(Flags.IS_MAN)\n",
+    "df.loc[df[\"who\"] == \"woman\", \"flags\"] |= int(Flags.IS_WOMAN)\n",
+    "df.loc[df[\"who\"] == \"child\", \"flags\"] |= int(Flags.IS_CHILD)\n",
+    "df.loc[df[\"age\"] < 18, \"flags\"] |= int(Flags.AGE_BELOW_18)\n",
+    "df.loc[df[\"age\"] >= 18, \"flags\"] |= int(Flags.AGE_ABOVE_18)\n",
+    "df.loc[df[\"pclass\"] == 1, \"flags\"] |= int(Flags.CLASS_1)\n",
+    "df.loc[df[\"pclass\"] == 2, \"flags\"] |= int(Flags.CLASS_2)\n",
+    "df.loc[df[\"pclass\"] == 3, \"flags\"] |= int(Flags.CLASS_3)\n",
+    "df.loc[df[\"survived\"] == 1, \"flags\"] |= int(Flags.SURVIVED)\n",
+    "df.loc[df[\"survived\"] == 0, \"flags\"] |= int(Flags.NOT_SURVIVED)\n",
+    "\n",
+    "df[\"flags_decoded\"] = df[\"flags\"].apply(lambda x: decode_flags(x, Flags))\n",
+    "print(\n",
+    "    df[[\"who\", \"age\", \"pclass\", \"survived\", \"flags\", \"flags_decoded\"]]\n",
+    "    .head()\n",
+    "    .to_string()\n",
+    ")"
    ]
   },
   {
@@ -191,9 +200,14 @@
    "outputs": [],
    "source": [
     "flags_main = [Flags.IS_MAN, Flags.IS_WOMAN, Flags.IS_CHILD]\n",
-    "flags_secondary = [Flags.AGE_BELOW_18, Flags.AGE_ABOVE_18, Flags.SURVIVED, Flags.NOT_SURVIVED]\n",
-    "req_n_main = [10,10,10]\n",
-    "req_n_secondary = [15,15, 10, 10]"
+    "flags_secondary = [\n",
+    "    Flags.AGE_BELOW_18,\n",
+    "    Flags.AGE_ABOVE_18,\n",
+    "    Flags.SURVIVED,\n",
+    "    Flags.NOT_SURVIVED,\n",
+    "]\n",
+    "req_n_main = [10, 10, 10]\n",
+    "req_n_secondary = [15, 15, 10, 10]"
    ]
   },
   {
@@ -219,14 +233,14 @@
    "source": [
     "np.random.seed(42)\n",
     "\n",
-    "df['chosen'] = sample_df_via_main_and_secondary_flags(\n",
+    "df[\"chosen\"] = sample_df_via_main_and_secondary_flags(\n",
     "    df,\n",
-    "    flags_col='flags',\n",
-    "    flags_main = flags_main,\n",
-    "    flags_secondary = flags_secondary,\n",
-    "    req_n_main = req_n_main,\n",
-    "    req_n_secondary = req_n_secondary,\n",
-    ")\n"
+    "    flags_col=\"flags\",\n",
+    "    flags_main=flags_main,\n",
+    "    flags_secondary=flags_secondary,\n",
+    "    req_n_main=req_n_main,\n",
+    "    req_n_secondary=req_n_secondary,\n",
+    ")"
    ]
   },
   {
@@ -254,10 +268,10 @@
    "source": [
     "sdf = make_sampling_summary_df(\n",
     "    df,\n",
-    "    sample_col='chosen',\n",
-    "    flags_col='flags',\n",
-    "    flags_main = flags_main,\n",
-    "    flags_secondary = flags_secondary\n",
+    "    sample_col=\"chosen\",\n",
+    "    flags_col=\"flags\",\n",
+    "    flags_main=flags_main,\n",
+    "    flags_secondary=flags_secondary,\n",
     ")\n",
     "print(sdf.to_string())"
    ]
@@ -329,7 +343,7 @@
     }
    ],
    "source": [
-    "print(df.loc[lambda x:x['chosen'], :].to_string())\n"
+    "print(df.loc[lambda x: x[\"chosen\"], :].to_string())"
    ]
   },
   {
