--- a/math_related/stats/ttest.ipynb
+++ b/math_related/stats/ttest.ipynb
@@ -180,11 +180,15 @@
     "np.random.seed(42)\n",
     "group1 = np.random.binomial(1, 0.04, 150)\n",
     "weight1 = np.random.uniform(0.1, 2, 150)\n",
-    "weight1 = weight1 / np.sum(weight1) * len(weight1)  # Normalize weights to have sum equal to n\n",
+    "weight1 = (\n",
+    "    weight1 / np.sum(weight1) * len(weight1)\n",
+    ")  # Normalize weights to have sum equal to n\n",
     "\n",
     "group2 = np.random.binomial(1, 0.07, 100)\n",
     "weight2 = np.random.uniform(0.1, 2, 100)\n",
-    "weight2 = weight2 / np.sum(weight2) * len(weight2)  # Normalize weights to have sum equal to n"
+    "weight2 = (\n",
+    "    weight2 / np.sum(weight2) * len(weight2)\n",
+    ")  # Normalize weights to have sum equal to n"
    ]
   },
   {
@@ -232,9 +236,7 @@
    ],
    "source": [
     "# 2. Welch's t-test (does not assume equal variance)\n",
-    "ttest_ind(\n",
-    "    group1, group2, alternative=\"less\", equal_var=False\n",
-    ")"
+    "ttest_ind(group1, group2, alternative=\"less\", equal_var=False)"
    ]
   },
   {
@@ -255,9 +257,7 @@
    ],
    "source": [
     "# independent\n",
-    "ttest_ind(\n",
-    "    group1, group2, alternative=\"less\", equal_var=True\n",
-    ")"
+    "ttest_ind(group1, group2, alternative=\"less\", equal_var=True)"
    ]
   },
   {
@@ -339,6 +339,7 @@
     "    p = np.mean(values)\n",
     "    return np.sqrt(p * (1 - p) * len(values) / (len(values) - 1))\n",
     "\n",
+    "\n",
     "bernoulli_sample_std(group1)"
    ]
   },
@@ -405,11 +406,12 @@
     "def effective_sample_size(weights):\n",
     "    sum_w = np.sum(weights)\n",
     "    sum_w2 = np.sum(weights**2)\n",
-    "    return (sum_w ** 2) / sum_w2\n",
+    "    return (sum_w**2) / sum_w2\n",
+    "\n",
     "\n",
     "def weighted_unbiased_sample_std(values, weights):\n",
     "    x_bar_weighted = np.average(values, weights=weights)\n",
-    "    biased_weighted_var = np.average((values - x_bar_weighted)**2, weights=weights)\n",
+    "    biased_weighted_var = np.average((values - x_bar_weighted) ** 2, weights=weights)\n",
     "\n",
     "    # Apply Bessel's correction, via kish's effective sample size\n",
     "    effective_n = effective_sample_size(weights)\n",
@@ -443,7 +445,7 @@
     }
    ],
    "source": [
-    "np.std(group1, ddof=1), weighted_unbiased_sample_std(group1,weight1)"
+    "np.std(group1, ddof=1), weighted_unbiased_sample_std(group1, weight1)"
    ]
   },
   {
@@ -470,7 +472,7 @@
     }
    ],
    "source": [
-    "np.std(group2, ddof=1), weighted_unbiased_sample_std(group2,weight2)"
+    "np.std(group2, ddof=1), weighted_unbiased_sample_std(group2, weight2)"
    ]
   },
   {
@@ -498,7 +500,8 @@
    ],
    "source": [
     "ttest_ind(\n",
-    "    group1, group2,\n",
+    "    group1,\n",
+    "    group2,\n",
     "    equal_var=True,\n",
     "    alternative=\"less\",\n",
     ")"
@@ -622,7 +625,7 @@
     "\n",
     "# Weighted t-test\n",
     "cm = CompareMeans(desc1, desc2)\n",
-    "result = cm.ttest_ind(alternative='smaller', usevar='pooled')\n",
+    "result = cm.ttest_ind(alternative=\"smaller\", usevar=\"pooled\")\n",
     "print(f\"Weighted t-test: {result}\")"
    ]
   },
