--- a/model_related/risk_theory/kelly_sim.ipynb
+++ b/model_related/risk_theory/kelly_sim.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "p = 0.55  # probability of winning\n",
     "q = 1 - p  # probability of losing\n",
-    "b = 2  # odds (2 to 1)\n"
+    "b = 2  # odds (2 to 1)"
    ]
   },
   {
@@ -46,7 +46,7 @@
     "kelly_fraction = (b * p - q) / b\n",
     "print(f\"Win probability: {p}\")\n",
     "print(f\"Odds: {b}:1\")\n",
-    "print(f\"Optimal Kelly fraction: {kelly_fraction:.2%}\")\n"
+    "print(f\"Optimal Kelly fraction: {kelly_fraction:.2%}\")"
    ]
   },
   {
@@ -71,11 +71,11 @@
    "source": [
     "# Different betting strategies\n",
     "strategies = {\n",
-    "    'Full Kelly': kelly_fraction,\n",
-    "    'Half Kelly': kelly_fraction / 2,\n",
-    "    'Quarter Kelly': kelly_fraction / 4,\n",
-    "    'Fixed 5%': 0.05\n",
-    "}\n"
+    "    \"Full Kelly\": kelly_fraction,\n",
+    "    \"Half Kelly\": kelly_fraction / 2,\n",
+    "    \"Quarter Kelly\": kelly_fraction / 4,\n",
+    "    \"Fixed 5%\": 0.05,\n",
+    "}"
    ]
   },
   {
@@ -89,14 +89,14 @@
     "results = {}\n",
     "for strategy_name, bet_fraction in strategies.items():\n",
     "    bankrolls = []\n",
-    "    \n",
+    "\n",
     "    for _ in range(n_simulations):\n",
     "        bankroll = initial_bankroll\n",
     "        history = [bankroll]\n",
-    "        \n",
+    "\n",
     "        for _ in range(n_bets):\n",
     "            bet_size = bankroll * bet_fraction\n",
-    "            \n",
+    "\n",
     "            # Simulate bet outcome\n",
     "            if np.random.random() < p:\n",
     "                # Win: gain 2x the bet\n",
@@ -104,12 +104,12 @@
     "            else:\n",
     "                # Lose: lose the bet\n",
     "                bankroll -= bet_size\n",
-    "            \n",
+    "\n",
     "            history.append(bankroll)\n",
-    "        \n",
+    "\n",
     "        bankrolls.append(history)\n",
-    "    \n",
-    "    results[strategy_name] = bankrolls\n"
+    "\n",
+    "    results[strategy_name] = bankrolls"
    ]
   },
   {
@@ -138,7 +138,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Plot results\n",
     "plt.figure(figsize=(14, 8))\n",
     "\n",
@@ -147,10 +146,10 @@
     "for strategy_name, bankrolls in results.items():\n",
     "    for i in range(min(10, n_simulations)):  # Plot first 10 simulations\n",
     "        plt.plot(bankrolls[i], alpha=0.3, linewidth=0.5)\n",
-    "plt.yscale('log')\n",
-    "plt.xlabel('Number of Bets')\n",
-    "plt.ylabel('Bankroll (log scale)')\n",
-    "plt.title('Sample Simulation Paths')\n",
+    "plt.yscale(\"log\")\n",
+    "plt.xlabel(\"Number of Bets\")\n",
+    "plt.ylabel(\"Bankroll (log scale)\")\n",
+    "plt.title(\"Sample Simulation Paths\")\n",
     "plt.grid(True, alpha=0.3)\n",
     "\n",
     "# Plot 2: Average performance\n",
@@ -158,9 +157,9 @@
     "for strategy_name, bankrolls in results.items():\n",
     "    avg_bankroll = np.mean(bankrolls, axis=0)\n",
     "    plt.plot(avg_bankroll, label=strategy_name, linewidth=2)\n",
-    "plt.xlabel('Number of Bets')\n",
-    "plt.ylabel('Average Bankroll')\n",
-    "plt.title('Average Bankroll Over Time')\n",
+    "plt.xlabel(\"Number of Bets\")\n",
+    "plt.ylabel(\"Average Bankroll\")\n",
+    "plt.title(\"Average Bankroll Over Time\")\n",
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "\n",
@@ -168,8 +167,8 @@
     "plt.subplot(2, 2, 3)\n",
     "final_values = {name: [b[-1] for b in bankrolls] for name, bankrolls in results.items()}\n",
     "plt.boxplot(final_values.values(), labels=final_values.keys())\n",
-    "plt.ylabel('Final Bankroll')\n",
-    "plt.title('Final Bankroll Distribution')\n",
+    "plt.ylabel(\"Final Bankroll\")\n",
+    "plt.title(\"Final Bankroll Distribution\")\n",
     "plt.xticks(rotation=45)\n",
     "plt.grid(True, alpha=0.3)\n",
     "\n",
@@ -182,7 +181,7 @@
     "    mean = np.mean(final)\n",
     "    min_val = np.min(final)\n",
     "    max_val = np.max(final)\n",
-    "    \n",
+    "\n",
     "    stats_text.append(f\"{strategy_name}:\")\n",
     "    stats_text.append(f\"  Median: ${median:.2f}\")\n",
     "    stats_text.append(f\"  Mean: ${mean:.2f}\")\n",
@@ -190,13 +189,20 @@
     "    stats_text.append(f\"  Max: ${max_val:.2f}\")\n",
     "    stats_text.append(\"\")\n",
     "\n",
-    "plt.text(0.1, 0.9, '\\n'.join(stats_text), transform=plt.gca().transAxes,\n",
-    "         fontfamily='monospace', verticalalignment='top', fontsize=9)\n",
-    "plt.axis('off')\n",
-    "plt.title('Final Statistics')\n",
+    "plt.text(\n",
+    "    0.1,\n",
+    "    0.9,\n",
+    "    \"\\n\".join(stats_text),\n",
+    "    transform=plt.gca().transAxes,\n",
+    "    fontfamily=\"monospace\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    fontsize=9,\n",
+    ")\n",
+    "plt.axis(\"off\")\n",
+    "plt.title(\"Final Statistics\")\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -237,11 +243,10 @@
     }
    ],
    "source": [
-    "\n",
     "# Print summary\n",
-    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"\\n\" + \"=\" * 50)\n",
     "print(\"SIMULATION SUMMARY\")\n",
-    "print(\"=\"*50)\n",
+    "print(\"=\" * 50)\n",
     "for strategy_name, bankrolls in results.items():\n",
     "    final = [b[-1] for b in bankrolls]\n",
     "    print(f\"\\n{strategy_name} ({bet_fraction*100:.1f}% of bankroll):\")\n",
