--- a/model_related/risk_theory/prob_ruin.ipynb
+++ b/model_related/risk_theory/prob_ruin.ipynb
@@ -59,8 +59,8 @@
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(12, 6))\n",
     "\n",
-    "ax.plot(t, v[:, 0:10], color='C0', alpha=0.7)\n",
-    "ax.plot(t, 0 * t, color='k', lw=2)"
+    "ax.plot(t, v[:, 0:10], color=\"C0\", alpha=0.7)\n",
+    "ax.plot(t, 0 * t, color=\"k\", lw=2)"
    ]
   },
   {
