--- a/model_related/sklearn_tute/sklearn_notes.ipynb
+++ b/model_related/sklearn_tute/sklearn_notes.ipynb
@@ -83,7 +83,8 @@
    ],
    "source": [
     "import seaborn as sns\n",
-    "df = sns.load_dataset('titanic')\n",
+    "\n",
+    "df = sns.load_dataset(\"titanic\")\n",
     "print(f\"{df.shape = }\")\n",
     "print(df.head().to_string())"
    ]
@@ -113,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols= df.columns.tolist()"
+    "cols = df.columns.tolist()"
    ]
   },
   {
@@ -123,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols = [i for i in cols if i not in ['alive', 'embark_town','pclass']]"
+    "cols = [i for i in cols if i not in [\"alive\", \"embark_town\", \"pclass\"]]"
    ]
   },
   {
@@ -399,11 +400,11 @@
     }
    ],
    "source": [
-    "### missing \n",
+    "### missing\n",
     "\n",
     "# vertical info view\n",
     "_ = pd.concat([df.head(1).T, df.dtypes, df.isna().sum()], axis=1)\n",
-    "_.columns = ['example_value', 'dtypes', 'n_null']\n",
+    "_.columns = [\"example_value\", \"dtypes\", \"n_null\"]\n",
     "_"
    ]
   },
@@ -414,7 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc[lambda x: x['age'].isna(), 'age'] = df['age'].median()"
+    "df.loc[lambda x: x[\"age\"].isna(), \"age\"] = df[\"age\"].median()"
    ]
   },
   {
@@ -424,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc[lambda x:x['embarked'].isna(),'embarked'] = df['embarked'].mode()[0]"
+    "df.loc[lambda x: x[\"embarked\"].isna(), \"embarked\"] = df[\"embarked\"].mode()[0]"
    ]
   },
   {
@@ -434,7 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols = [i for i in cols if i not in ['deck']]"
+    "cols = [i for i in cols if i not in [\"deck\"]]"
    ]
   },
   {
@@ -454,10 +455,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['is_male'] = df['sex'].map(\n",
-    "    {'male':1, 'female':0}\n",
-    ")\n",
-    "cols[cols.index('sex')] = 'is_male'"
+    "df[\"is_male\"] = df[\"sex\"].map({\"male\": 1, \"female\": 0})\n",
+    "cols[cols.index(\"sex\")] = \"is_male\""
    ]
   },
   {
@@ -478,9 +477,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.get_dummies(df, columns=['embarked', 'class', 'who'], drop_first=True)\n",
-    "cols = [i for i in cols if i not in ['embarked','class','who']]\n",
-    "cols += [i for i in df.columns.tolist() if i.startswith(('embarked_','class_','who_'))]"
+    "df = pd.get_dummies(df, columns=[\"embarked\", \"class\", \"who\"], drop_first=True)\n",
+    "cols = [i for i in cols if i not in [\"embarked\", \"class\", \"who\"]]\n",
+    "cols += [\n",
+    "    i for i in df.columns.tolist() if i.startswith((\"embarked_\", \"class_\", \"who_\"))\n",
+    "]"
    ]
   },
   {
@@ -1135,7 +1136,7 @@
    ],
    "source": [
     "### correlation matrix\n",
-    "df[cols].corr().style.background_gradient(cmap='coolwarm')"
+    "df[cols].corr().style.background_gradient(cmap=\"coolwarm\")"
    ]
   },
   {
@@ -1169,9 +1170,11 @@
    "outputs": [],
    "source": [
     "# form\n",
-    "X = df[[c for c in cols if c != 'survived']]\n",
-    "y = df['survived']\n",
-    "X_train, X_test, y_train, y_test = sk.model_selection.train_test_split(X, y, test_size=0.2, random_state=42)"
+    "X = df[[c for c in cols if c != \"survived\"]]\n",
+    "y = df[\"survived\"]\n",
+    "X_train, X_test, y_train, y_test = sk.model_selection.train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")"
    ]
   },
   {
@@ -1459,14 +1462,15 @@
     }
    ],
    "source": [
-    "iidxes = y_train.reset_index(drop=True).loc[lambda x: x==0].index[:5]\n",
+    "iidxes = y_train.reset_index(drop=True).loc[lambda x: x == 0].index[:5]\n",
     "for i in iidxes:\n",
     "    fig, ax = plt.subplots(figsize=(12, 6))\n",
     "    shap.plots.waterfall(shap_train[i], show=False)\n",
-    "    ax.set_title(f'SHAP Waterfall - Obs {i}, Target: {y_train.iloc[i]}, Pred_prob: {lgbm.predict_proba(X_train.iloc[[i]])[0][1]:.3f}')\n",
+    "    ax.set_title(\n",
+    "        f\"SHAP Waterfall - Obs {i}, Target: {y_train.iloc[i]}, Pred_prob: {lgbm.predict_proba(X_train.iloc[[i]])[0][1]:.3f}\"\n",
+    "    )\n",
     "    # plt.close()\n",
-    "    plt.show()\n",
-    "    "
+    "    plt.show()"
    ]
   },
   {
@@ -1527,14 +1531,15 @@
     }
    ],
    "source": [
-    "iidxes = y_train.reset_index(drop=True).loc[lambda x: x==1].index[:5]\n",
+    "iidxes = y_train.reset_index(drop=True).loc[lambda x: x == 1].index[:5]\n",
     "for i in iidxes:\n",
     "    fig, ax = plt.subplots(figsize=(12, 6))\n",
     "    shap.plots.waterfall(shap_train[i], show=False)\n",
-    "    ax.set_title(f'SHAP Waterfall - Obs {i}, Target: {y_train.iloc[i]}, Pred_prob: {lgbm.predict_proba(X_train.iloc[[i]])[0][1]:.3f}')\n",
+    "    ax.set_title(\n",
+    "        f\"SHAP Waterfall - Obs {i}, Target: {y_train.iloc[i]}, Pred_prob: {lgbm.predict_proba(X_train.iloc[[i]])[0][1]:.3f}\"\n",
+    "    )\n",
     "    # plt.close()\n",
-    "    plt.show()\n",
-    "    "
+    "    plt.show()"
    ]
   },
   {
@@ -1555,7 +1560,7 @@
     }
    ],
    "source": [
-    "shap.summary_plot(shap_train, X_train, plot_type='bar')"
+    "shap.summary_plot(shap_train, X_train, plot_type=\"bar\")"
    ]
   },
   {
@@ -1613,13 +1618,13 @@
    "source": [
     "# 2. Feature interaction strength matrix\n",
     "interaction_matrix = np.abs(shap_interaction).sum(0)\n",
-    "interaction_df = pd.DataFrame(interaction_matrix, \n",
-    "                             index=X_train.columns, \n",
-    "                             columns=X_train.columns)\n",
+    "interaction_df = pd.DataFrame(\n",
+    "    interaction_matrix, index=X_train.columns, columns=X_train.columns\n",
+    ")\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 8))\n",
-    "sns.heatmap(interaction_df, annot=True, cmap='viridis', ax=ax)\n",
-    "ax.set_title('Feature Interaction Strength Matrix')"
+    "sns.heatmap(interaction_df, annot=True, cmap=\"viridis\", ax=ax)\n",
+    "ax.set_title(\"Feature Interaction Strength Matrix\")"
    ]
   },
   {
@@ -1654,15 +1659,17 @@
     "interactions = []\n",
     "\n",
     "for i in range(len(X_train.columns)):\n",
-    "    for j in range(i+1, len(X_train.columns)):\n",
-    "        interactions.append({\n",
-    "            'feature1': X_train.columns[i],\n",
-    "            'feature2': X_train.columns[j], \n",
-    "            'interaction_strength': interaction_matrix[i, j]\n",
-    "        })\n",
+    "    for j in range(i + 1, len(X_train.columns)):\n",
+    "        interactions.append(\n",
+    "            {\n",
+    "                \"feature1\": X_train.columns[i],\n",
+    "                \"feature2\": X_train.columns[j],\n",
+    "                \"interaction_strength\": interaction_matrix[i, j],\n",
+    "            }\n",
+    "        )\n",
     "\n",
     "interaction_df = pd.DataFrame(interactions)\n",
-    "top_interactions = interaction_df.nlargest(10, 'interaction_strength')\n",
+    "top_interactions = interaction_df.nlargest(10, \"interaction_strength\")\n",
     "print(\"Top 10 Feature Interactions:\")\n",
     "print(top_interactions.to_string(index=False))"
    ]
@@ -1687,14 +1694,9 @@
    "source": [
     "# 4. Visualize specific interactions\n",
     "top_pair = top_interactions.iloc[0]\n",
-    "feature1, feature2 = top_pair['feature1'], top_pair['feature2']\n",
+    "feature1, feature2 = top_pair[\"feature1\"], top_pair[\"feature2\"]\n",
     "\n",
-    "shap.dependence_plot(\n",
-    "    feature1, \n",
-    "    shap_train.values, \n",
-    "    X_train, \n",
-    "    interaction_index=feature2\n",
-    ")"
+    "shap.dependence_plot(feature1, shap_train.values, X_train, interaction_index=feature2)"
    ]
   },
   {
@@ -1716,14 +1718,9 @@
    ],
    "source": [
     "pair = top_interactions.iloc[1]\n",
-    "feature1, feature2 = pair['feature1'], pair['feature2']\n",
+    "feature1, feature2 = pair[\"feature1\"], pair[\"feature2\"]\n",
     "\n",
-    "shap.dependence_plot(\n",
-    "    feature1, \n",
-    "    shap_train.values, \n",
-    "    X_train, \n",
-    "    interaction_index=feature2\n",
-    ")"
+    "shap.dependence_plot(feature1, shap_train.values, X_train, interaction_index=feature2)"
    ]
   },
   {
@@ -1745,14 +1742,9 @@
    ],
    "source": [
     "pair = top_interactions.iloc[2]\n",
-    "feature1, feature2 = pair['feature1'], pair['feature2']\n",
+    "feature1, feature2 = pair[\"feature1\"], pair[\"feature2\"]\n",
     "\n",
-    "shap.dependence_plot(\n",
-    "    feature1, \n",
-    "    shap_train.values, \n",
-    "    X_train, \n",
-    "    interaction_index=feature2\n",
-    ")"
+    "shap.dependence_plot(feature1, shap_train.values, X_train, interaction_index=feature2)"
    ]
   },
   {
@@ -1815,7 +1807,7 @@
     }
    ],
    "source": [
-    "ff = lambda x: (x['fare'] < 50)\n",
+    "ff = lambda x: (x[\"fare\"] < 50)\n",
     "iidexs = np.where(ff(X_train))[0].tolist()\n",
     "shap.plots.scatter(shap_train[iidexs, \"fare\"], color=shap_train[iidexs, \"adult_male\"])"
    ]
@@ -1839,17 +1831,19 @@
    ],
    "source": [
     "#\n",
-    "adult_male_idx = list(X_train.columns).index('adult_male')\n",
+    "adult_male_idx = list(X_train.columns).index(\"adult_male\")\n",
     "shap_values = shap_train.values[:, adult_male_idx]\n",
-    "adult_male_values = X_train['adult_male'].values\n",
-    "fare_values = X_train['class_Third'].values\n",
+    "adult_male_values = X_train[\"adult_male\"].values\n",
+    "fare_values = X_train[\"class_Third\"].values\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
-    "scatter = ax.scatter(adult_male_values, shap_values, c=fare_values, cmap='viridis', alpha=0.7, s=30)\n",
-    "ax.set_xlabel('adult_male')\n",
-    "ax.set_ylabel('SHAP value for adult_male')\n",
-    "ax.set_title('adult_male Dependency Plot (colored by class_Third)')\n",
-    "fig.colorbar(scatter, ax=ax, label='class_Third')\n",
+    "scatter = ax.scatter(\n",
+    "    adult_male_values, shap_values, c=fare_values, cmap=\"viridis\", alpha=0.7, s=30\n",
+    ")\n",
+    "ax.set_xlabel(\"adult_male\")\n",
+    "ax.set_ylabel(\"SHAP value for adult_male\")\n",
+    "ax.set_title(\"adult_male Dependency Plot (colored by class_Third)\")\n",
+    "fig.colorbar(scatter, ax=ax, label=\"class_Third\")\n",
     "ax.grid(True, alpha=0.3)"
    ]
   },
@@ -1880,15 +1874,20 @@
     "from sklearn.inspection import permutation_importance\n",
     "\n",
     "# Get feature importance\n",
-    "perm_importance = permutation_importance(lgbm, X_train, y_train, n_repeats=10, random_state=42)\n",
+    "perm_importance = permutation_importance(\n",
+    "    lgbm, X_train, y_train, n_repeats=10, random_state=42\n",
+    ")\n",
     "\n",
     "# Create interaction features manually and test\n",
     "interaction_features = X_train.copy()\n",
     "for i, col1 in enumerate(X_train.columns[:5]):  # Top 5 features\n",
-    "    for j, col2 in enumerate(X_train.columns[i+1:6]):\n",
-    "        interaction_features[f'{col1}_x_{col2}'] = X_train[col1] * X_train[col2]\n",
+    "    for j, col2 in enumerate(X_train.columns[i + 1 : 6]):\n",
+    "        interaction_features[f\"{col1}_x_{col2}\"] = X_train[col1] * X_train[col2]\n",
     "\n",
-    "print(\"Created interaction features:\", [col for col in interaction_features.columns if '_x_' in col])"
+    "print(\n",
+    "    \"Created interaction features:\",\n",
+    "    [col for col in interaction_features.columns if \"_x_\" in col],\n",
+    ")"
    ]
   },
   {
