--- a/plot_related/mpl_notes/contents/bars_barhs_dodge.ipynb
+++ b/plot_related/mpl_notes/contents/bars_barhs_dodge.ipynb
@@ -225,7 +225,14 @@
     "plot_bars_dodge(\n",
     "    ax,\n",
     "    x=x,\n",
-    "    y_data=pdf[[\"survival_rate\", \"survival_rate_man\", \"survival_rate_woman\", \"survival_rate_child\"]],\n",
+    "    y_data=pdf[\n",
+    "        [\n",
+    "            \"survival_rate\",\n",
+    "            \"survival_rate_man\",\n",
+    "            \"survival_rate_woman\",\n",
+    "            \"survival_rate_child\",\n",
+    "        ]\n",
+    "    ],\n",
     ")\n",
     "x_ticklabels = pdf[\"age_bin\"].astype(str)\n",
     "_ = ax.set_xticks(x, labels=x_ticklabels, rotation=45)"
@@ -255,7 +262,14 @@
     "plot_barhs_dodge(\n",
     "    ax,\n",
     "    y=y,\n",
-    "    x_data=pdf[[\"survival_rate\", \"survival_rate_man\", \"survival_rate_woman\", \"survival_rate_child\"]],\n",
+    "    x_data=pdf[\n",
+    "        [\n",
+    "            \"survival_rate\",\n",
+    "            \"survival_rate_man\",\n",
+    "            \"survival_rate_woman\",\n",
+    "            \"survival_rate_child\",\n",
+    "        ]\n",
+    "    ],\n",
     ")\n",
     "y_ticklabels = pdf[\"age_bin\"].astype(str)\n",
     "_ = ax.set_yticks(y, labels=y_ticklabels, rotation=45)"
