--- a/plot_related/mpl_notes/contents/box.ipynb
+++ b/plot_related/mpl_notes/contents/box.ipynb
@@ -105,17 +105,23 @@
     "\n",
     "# Sample data\n",
     "np.random.seed(0)\n",
-    "df = pd.DataFrame({\n",
-    "    'Category': np.repeat(['A', 'B', 'C'], 50),\n",
-    "    'Value': np.concatenate([\n",
-    "        np.random.normal(loc=5, scale=1, size=50),\n",
-    "        np.random.normal(loc=7, scale=1.5, size=50),\n",
-    "        np.random.normal(loc=6, scale=0.5, size=50)\n",
-    "    ])\n",
-    "})\n",
+    "df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"Category\": np.repeat([\"A\", \"B\", \"C\"], 50),\n",
+    "        \"Value\": np.concatenate(\n",
+    "            [\n",
+    "                np.random.normal(loc=5, scale=1, size=50),\n",
+    "                np.random.normal(loc=7, scale=1.5, size=50),\n",
+    "                np.random.normal(loc=6, scale=0.5, size=50),\n",
+    "            ]\n",
+    "        ),\n",
+    "    }\n",
+    ")\n",
     "\n",
     "# Group values by category\n",
-    "grouped = [df[df['Category'] == cat]['Value'].values for cat in sorted(df['Category'].unique())]\n",
+    "grouped = [\n",
+    "    df[df[\"Category\"] == cat][\"Value\"].values for cat in sorted(df[\"Category\"].unique())\n",
+    "]\n",
     "\n",
     "# Create figure and axes\n",
     "fig, ax = plt.subplots(figsize=(8, 5))\n",
@@ -124,7 +130,7 @@
     "ax.boxplot(grouped, patch_artist=True)\n",
     "\n",
     "# Label x-axis with category names\n",
-    "ax.set_xticklabels(sorted(df['Category'].unique()))\n",
+    "ax.set_xticklabels(sorted(df[\"Category\"].unique()))\n",
     "ax.set_title(\"Boxplot by Category\")\n",
     "ax.set_xlabel(\"Category\")\n",
     "ax.set_ylabel(\"Value\")\n",
