--- a/plot_related/mpl_notes/contents/fivnum.ipynb
+++ b/plot_related/mpl_notes/contents/fivnum.ipynb
@@ -48,7 +48,7 @@
     "        dat.min(),\n",
     "        dat.max() + (dat.max() - dat.min()) / nbins,\n",
     "        (dat.max() - dat.min()) / nbins,\n",
-    "    )\n"
+    "    )"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "source": [
     "dat = hist[\"r_12m\"].dropna()\n",
     "fivnum = calc_7_numbers(dat)\n",
-    "fivnum\n"
+    "fivnum"
    ]
   },
   {
