--- a/plot_related/mpl_notes/contents/histogram.ipynb
+++ b/plot_related/mpl_notes/contents/histogram.ipynb
@@ -31,7 +31,7 @@
     "        }\n",
     "    )\n",
     "    sdf[f\"{col}_freq\"] = sdf[\"n\"] / sdf[\"n\"].sum()\n",
-    "    return sdf\n"
+    "    return sdf"
    ]
   },
   {
@@ -276,12 +276,12 @@
     "edges = np.linspace(-0.5, 0.5, 11)\n",
     "\n",
     "# cut\n",
-    "df2 = df.loc[lambda x:ff(x), :].copy()\n",
+    "df2 = df.loc[lambda x: ff(x), :].copy()\n",
     "df2[f\"{col}_binned\"] = pd.cut(df2[col], bins=edges, right=False)\n",
     "\n",
     "# signal\n",
     "pdf = calc_freq_signal(df2, col=f\"{col}_binned\")\n",
-    "pdf\n"
+    "pdf"
    ]
   },
   {
