--- a/plot_related/plot_examples/bars/bars_dodge.ipynb
+++ b/plot_related/plot_examples/bars/bars_dodge.ipynb
@@ -85,7 +85,8 @@
    ],
    "source": [
     "import seaborn as sns\n",
-    "df = sns.load_dataset('titanic')\n",
+    "\n",
+    "df = sns.load_dataset(\"titanic\")\n",
     "print(f\"{df.shape = }\")\n",
     "print(df.head().to_string())"
    ]
@@ -397,9 +398,21 @@
     "        \"survival_rate\": (\"survived\", \"mean\"),\n",
     "    }\n",
     ")\n",
-    "gdf['survival_rate_man'] = df.loc[lambda x:x['who'] == 'man'].groupby(age_bin, dropna=False, observed=False)['survived'].mean()\n",
-    "gdf['survival_rate_woman'] = df.loc[lambda x:x['who'] == 'woman'].groupby(age_bin, dropna=False, observed=False)['survived'].mean()\n",
-    "gdf['survival_rate_child'] = df.loc[lambda x:x['who'] == 'child'].groupby(age_bin, dropna=False, observed=False)['survived'].mean()\n",
+    "gdf[\"survival_rate_man\"] = (\n",
+    "    df.loc[lambda x: x[\"who\"] == \"man\"]\n",
+    "    .groupby(age_bin, dropna=False, observed=False)[\"survived\"]\n",
+    "    .mean()\n",
+    ")\n",
+    "gdf[\"survival_rate_woman\"] = (\n",
+    "    df.loc[lambda x: x[\"who\"] == \"woman\"]\n",
+    "    .groupby(age_bin, dropna=False, observed=False)[\"survived\"]\n",
+    "    .mean()\n",
+    ")\n",
+    "gdf[\"survival_rate_child\"] = (\n",
+    "    df.loc[lambda x: x[\"who\"] == \"child\"]\n",
+    "    .groupby(age_bin, dropna=False, observed=False)[\"survived\"]\n",
+    "    .mean()\n",
+    ")\n",
     "gdf"
    ]
   },
@@ -458,8 +471,8 @@
     "ax.set_title(\"Titanic Survival Rate by Age and Gender Groups\")\n",
     "ax.legend(title=\"Groups\", bbox_to_anchor=(0.5, -0.25), loc=\"upper center\", ncol=4)\n",
     "ax.grid(axis=\"y\", linestyle=\"--\", alpha=0.7)\n",
-    "ax.spines['top'].set_visible(False)\n",
-    "ax.spines['right'].set_visible(False)\n",
+    "ax.spines[\"top\"].set_visible(False)\n",
+    "ax.spines[\"right\"].set_visible(False)\n",
     "plt.tight_layout()"
    ]
   },
