--- a/plot_related/plot_examples/lines/ts_with_annotations.ipynb
+++ b/plot_related/plot_examples/lines/ts_with_annotations.ipynb
@@ -58,7 +58,7 @@
     "    ts[\"year\"].astype(str) + \"-\" + ts[\"month\"].astype(str) + \"-01\"\n",
     ")\n",
     "ts[\"n\"] = ts[\"passengers\"]\n",
-    "ts.drop(columns=[\"year\", \"month\",'passengers'], inplace=True)\n",
+    "ts.drop(columns=[\"year\", \"month\", \"passengers\"], inplace=True)\n",
     "\n",
     "\n",
     "import ta\n",
@@ -93,23 +93,19 @@
    ],
    "source": [
     "years = pd.Series(ts.index.year, index=ts.index)\n",
-    "ts_g = (\n",
-    "    ts\n",
-    "    .groupby(years, dropna=False, observed=False)\n",
-    "    .agg(\n",
-    "        **{\n",
-    "            \"max_n\": (\"n\", \"max\"),\n",
-    "            \"max_n_date\": (\n",
-    "                \"n\",\n",
-    "                lambda x: x.sort_values(ascending=False).index[0],\n",
-    "            ),\n",
-    "            \"min_n\": (\"n\", \"min\"),\n",
-    "            \"min_n_date\": (\n",
-    "                \"n\",\n",
-    "                lambda x: x.sort_values(ascending=True).index[0],\n",
-    "            ),\n",
-    "        }\n",
-    "    )\n",
+    "ts_g = ts.groupby(years, dropna=False, observed=False).agg(\n",
+    "    **{\n",
+    "        \"max_n\": (\"n\", \"max\"),\n",
+    "        \"max_n_date\": (\n",
+    "            \"n\",\n",
+    "            lambda x: x.sort_values(ascending=False).index[0],\n",
+    "        ),\n",
+    "        \"min_n\": (\"n\", \"min\"),\n",
+    "        \"min_n_date\": (\n",
+    "            \"n\",\n",
+    "            lambda x: x.sort_values(ascending=True).index[0],\n",
+    "        ),\n",
+    "    }\n",
     ")\n",
     "print(ts_g.head().to_string())"
    ]
@@ -130,9 +126,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(12, 6))\n",
-    "ax.plot(\n",
-    "    ts.index, ts[\"n\"], alpha=0.8, marker=\"o\", color=\"red\", label=\"Passenger Count\"\n",
-    ")\n",
+    "ax.plot(ts.index, ts[\"n\"], alpha=0.8, marker=\"o\", color=\"red\", label=\"Passenger Count\")\n",
     "ax.plot(\n",
     "    ts.index,\n",
     "    ts[\"ma12\"],\n",
