--- a/concurrency_related/asyncio_script/docu/coroutines_tasks_related/task_task_group_gather.ipynb
+++ b/concurrency_related/asyncio_script/docu/coroutines_tasks_related/task_task_group_gather.ipynb
@@ -38,22 +38,24 @@
    "source": [
     "import asyncio\n",
     "\n",
+    "\n",
     "async def some_coro(param):\n",
     "    await asyncio.sleep(1)\n",
     "    print(f\"Completed coro with param: {param}\")\n",
     "\n",
-    "background_tasks = set() # A 1\n",
+    "\n",
+    "background_tasks = set()  # A 1\n",
     "\n",
     "for i in range(10):\n",
     "    task = asyncio.create_task(some_coro(param=i))\n",
     "\n",
     "    # Add task to the set. This creates a strong reference.\n",
-    "    background_tasks.add(task) # A 2\n",
+    "    background_tasks.add(task)  # A 2\n",
     "\n",
     "    # To prevent keeping references to finished tasks forever,\n",
     "    # make each task remove its own reference from the set after\n",
     "    # completion:\n",
-    "    task.add_done_callback(background_tasks.discard) # A 3\n",
+    "    task.add_done_callback(background_tasks.discard)  # A 3\n",
     "\n",
     "await asyncio.sleep(0)"
    ]
@@ -111,13 +113,15 @@
    "source": [
     "import asyncio\n",
     "\n",
+    "\n",
     "async def some_coro(param):\n",
     "    try:\n",
     "        await asyncio.sleep(1)\n",
-    "    except asyncio.CancelledError: # B\n",
+    "    except asyncio.CancelledError:  # B\n",
     "        print(f\"Cancelled coro with param: {param}\")\n",
     "        raise\n",
     "    print(f\"Completed coro with param: {param}\")\n",
+    "\n",
     "\n",
     "background_tasks = set()\n",
     "\n",
@@ -127,9 +131,9 @@
     "    task.add_done_callback(background_tasks.discard)\n",
     "\n",
     "await asyncio.sleep(0)\n",
-    "background_tasks.pop().cancel() # A\n",
-    "background_tasks.pop().cancel() \n",
-    "background_tasks.pop().cancel() "
+    "background_tasks.pop().cancel()  # A\n",
+    "background_tasks.pop().cancel()\n",
+    "background_tasks.pop().cancel()"
    ]
   },
   {
@@ -167,14 +171,15 @@
    "source": [
     "import asyncio\n",
     "\n",
+    "\n",
     "async def some_coro(param):\n",
     "    await asyncio.sleep(1)\n",
     "    print(f\"Completed coro with param: {param}\")\n",
     "\n",
     "\n",
-    "async with asyncio.TaskGroup() as tg: # A 1\n",
+    "async with asyncio.TaskGroup() as tg:  # A 1\n",
     "    for i in range(3):\n",
-    "        tg.create_task(some_coro(param=i))# A 2"
+    "        tg.create_task(some_coro(param=i))  # A 2"
    ]
   },
   {
@@ -195,6 +200,7 @@
    "source": [
     "import asyncio\n",
     "\n",
+    "\n",
     "async def some_coro(param):\n",
     "    await asyncio.sleep(1)\n",
     "    print(f\"Completed coro with param: {param}\")\n",
@@ -204,7 +210,7 @@
     "    tasks = []\n",
     "    for i in range(3):\n",
     "        tasks.append(tg.create_task(some_coro(param=i)))\n",
-    "    tasks[0].cancel() # D"
+    "    tasks[0].cancel()  # D"
    ]
   },
   {
@@ -227,16 +233,20 @@
    "source": [
     "import asyncio\n",
     "\n",
+    "\n",
     "class TerminateTaskGroup(Exception):\n",
     "    pass\n",
+    "\n",
     "\n",
     "async def force_terminate_task_group():\n",
     "    raise TerminateTaskGroup()\n",
     "\n",
+    "\n",
     "async def job(task_id, sleep_time):\n",
-    "    print(f'Task {task_id}: start')\n",
+    "    print(f\"Task {task_id}: start\")\n",
     "    await asyncio.sleep(sleep_time)\n",
-    "    print(f'Task {task_id}: done')\n",
+    "    print(f\"Task {task_id}: done\")\n",
+    "\n",
     "\n",
     "async def main():\n",
     "    try:\n",
@@ -245,8 +255,9 @@
     "            group.create_task(job(2, 1.5))\n",
     "            await asyncio.sleep(1)\n",
     "            group.create_task(force_terminate_task_group())\n",
-    "    except* TerminateTaskGroup: # exception group instead of normal exception B\n",
+    "    except* TerminateTaskGroup:  # exception group instead of normal exception B\n",
     "        print(\"Task group terminated due to TerminateTaskGroup exception.\")\n",
+    "\n",
     "\n",
     "await main()"
    ]
@@ -302,8 +313,9 @@
     "        group.create_task(job(1, 0.5))\n",
     "        group.create_task(job(2, 1.5))\n",
     "        await asyncio.sleep(1)\n",
-    "        group.create_task(force_terminate_task_group()) # C\n",
+    "        group.create_task(force_terminate_task_group())  # C\n",
     "        # raise Exception\n",
+    "\n",
     "\n",
     "await main()"
    ]
@@ -381,6 +393,7 @@
    "source": [
     "import asyncio\n",
     "\n",
+    "\n",
     "async def factorial(name, number):\n",
     "    f = 1\n",
     "    for i in range(2, number + 1):\n",
@@ -390,12 +403,14 @@
     "    print(f\"Task {name}: factorial({number}) = {f}\")\n",
     "    return f\n",
     "\n",
+    "\n",
     "async def main():\n",
-    "    result_lst = await asyncio.gather(   \n",
-    "        factorial(\"A\", 2), # A\n",
+    "    result_lst = await asyncio.gather(\n",
+    "        factorial(\"A\", 2),  # A\n",
     "        asyncio.create_task(factorial(\"B\", 3)),\n",
     "    )\n",
     "    print(f\"{result_lst = }\")\n",
+    "\n",
     "\n",
     "await main()"
    ]
@@ -426,10 +441,11 @@
     "    try:\n",
     "        await asyncio.gather(\n",
     "            gfut,\n",
-    "            cancel_coro(gfut),# B\n",
+    "            cancel_coro(gfut),  # B\n",
     "        )\n",
     "    except asyncio.CancelledError:\n",
     "        print(\"Main caught gather future cancellation.\")\n",
+    "\n",
     "\n",
     "await main()"
    ]
@@ -465,11 +481,12 @@
     "        result_lst = await asyncio.gather(\n",
     "            factorial(\"A\", 2),\n",
     "            task,\n",
-    "            cancel_coro(task), # C\n",
+    "            cancel_coro(task),  # C\n",
     "        )\n",
     "        print(f\"{result_lst = }\")\n",
     "    except asyncio.CancelledError:\n",
     "        print(\"Main caught awaitable cancellation.\")\n",
+    "\n",
     "\n",
     "await main()"
    ]
@@ -511,12 +528,13 @@
     "            factorial(\"A\", 2),\n",
     "            task,\n",
     "            cancel_coro(task),\n",
-    "            return_exceptions=True, # D\n",
+    "            return_exceptions=True,  # D\n",
     "        )\n",
     "        result_lst = await gather\n",
     "        print(f\"{result_lst = }\")\n",
     "    except asyncio.CancelledError:\n",
     "        print(\"Main caught awaitable cancellation.\")\n",
+    "\n",
     "\n",
     "await main()"
    ]
@@ -553,14 +571,15 @@
     "        gather = asyncio.gather(\n",
     "            factorial(\"A\", 2),\n",
     "            task,\n",
-    "            cancel_coro(task), # E\n",
+    "            cancel_coro(task),  # E\n",
     "        )\n",
     "        result_lst = await gather\n",
     "        print(f\"{result_lst = }\")\n",
     "    except asyncio.CancelledError:\n",
     "        print(\"Main caught awaitable cancellation.\")\n",
-    "        gather.cancel() # F\n",
+    "        gather.cancel()  # F\n",
     "        print(\"Gather cancelled from except block.\")\n",
+    "\n",
     "\n",
     "await main()"
    ]
