--- a/data_related/db_related/template_approach/template_sql.ipynb
+++ b/data_related/db_related/template_approach/template_sql.ipynb
@@ -56,13 +56,14 @@
     "    box_muller_transformation_z1 = f\"{mean} + {stddev} * sqrt(-2 * ln({_random_01})) * cos(2 * 3.14159 * {_random_01})\"\n",
     "    return box_muller_transformation_z1\n",
     "\n",
+    "\n",
     "def make_bin_expression(col: str, bins: list[float], tabs: int = 0) -> str:\n",
     "    \"\"\"left close, right open\"\"\"\n",
     "    expr = \"\"\n",
     "    indent = \"    \" * tabs\n",
-    "    for i in range(len(bins)-1):\n",
+    "    for i in range(len(bins) - 1):\n",
     "        lower = bins[i]\n",
-    "        upper = bins[i+1]\n",
+    "        upper = bins[i + 1]\n",
     "        if i == 0:\n",
     "            expr += f\"when {col} < {lower} then '[-Inf, {lower})'\\n\"\n",
     "        expr += f\"{indent}when {col} >= {lower} and {col} < {upper} then '[{lower},{upper})'\\n\"\n",
@@ -192,7 +193,7 @@
     "#             qualify row_number() over (order by (select null)) <= 5\n",
     "#         ) t\n",
     "#     )\n",
-    "#     select \n",
+    "#     select\n",
     "#         t.*,\n",
     "#         n.n as replication_id,\n",
     "#         (row_number() over (order by (select null))) as new_id\n",
@@ -202,7 +203,7 @@
     "# \"\"\"\n",
     "\n",
     "# _ = eng.run(expansion_qry)\n",
-    "# \n",
+    "#\n",
     "# eng.run(\"select count(*) as n from titanic_exp\").iloc[0,0]"
    ]
   },
@@ -277,7 +278,7 @@
     }
    ],
    "source": [
-    "tbl = 'titanic'\n",
+    "tbl = \"titanic\"\n",
     "bins = [0, 10, 20, 30, 100]\n",
     "\n",
     "qry = f\"\"\"\n",
