--- a/plot_related/mpl_notes/addons/xticklabels_formatter.ipynb
+++ b/plot_related/mpl_notes/addons/xticklabels_formatter.ipynb
@@ -66,7 +66,7 @@
     "            right = category.right\n",
     "            mid = (left + right) / 2\n",
     "            labels.append(f\"~{mid:.0%}\")\n",
-    "    return labels\n"
+    "    return labels"
    ]
   }
  ],
